--- a/css/computer.scss
+++ b/css/computer.scss
@@ -98,6 +98,19 @@
             font-size: 5rem;
             z-index: 1;
         }
+
+        .ptag {
+            display: flex;
+            width: 100%;
+            padding-left: 10%;
+            padding-right: 10%;
+            text-align: center;
+            position: absolute;
+            color: white;
+            top: 23rem;
+            font-size: 1.5rem;
+            z-index: 1;
+        }
     
         section {
             background-image: 
@@ -112,14 +125,15 @@
             background-size: 7rem, 7rem, 2.5rem;
             background-repeat: no-repeat;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-content: center;
             width: 100%;
-            height: 5rem;
+            height: 10rem;
             margin-top: 2rem;
             margin-bottom: 8rem;
             text-align: center;
-            font-size: 2rem;
+            font-size: 1rem;
             color: black;
         }
     
