--- a/css/computer.scss
+++ b/css/computer.scss
@@ -129,12 +129,19 @@
             justify-content: center;
             align-content: center;
             width: 100%;
+            padding-left: 10%;
+            padding-right: 10%;
+            padding-top: 2.5%;
             height: 10rem;
             margin-top: 2rem;
             margin-bottom: 8rem;
             text-align: center;
             font-size: 1rem;
             color: black;
+
+            p {
+                margin-bottom: 1%;
+            }
         }
     
         // @media (min-height: 600px) { 
@@ -268,6 +275,4 @@
         font-family: Jost;
         src: url(./Jost/static/Jost-ExtraLight.ttf);
     }
-
-
 }
