--- a/css/computer.css
+++ b/css/computer.css
@@ -4,6 +4,9 @@
     padding: 0;
     box-sizing: border-box;
   }
+  .hidden {
+    display: none !important;
+  }
   body {
     background-color: white;
     display: flex;
