--- a/css/computer.scss
+++ b/css/computer.scss
@@ -5,6 +5,10 @@
         padding: 0;
         box-sizing: border-box;
     }
+
+    .hidden {
+        display: none !important;
+      }
     
     body {
         background-color: white;
