--- a/css/desktop.css
+++ b/css/desktop.css
@@ -4,6 +4,9 @@
     padding: 0;
     box-sizing: border-box;
   }
+  .hidden {
+    display: none !important;
+  }
   body {
     background-color: white;
     display: flex;
@@ -56,6 +59,18 @@
   nav input[type=checkbox]:checked ~ ul {
     display: flex;
   }
+  .ptag {
+    display: flex;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+    position: absolute;
+    color: white;
+    top: 23rem !important;
+    font-size: 1.5rem;
+    z-index: 1;
+  }
   main {
     width: 100%;
   }
@@ -75,7 +90,7 @@
     z-index: 1;
   }
   main section {
-    background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
+    background-image: url(../src/svg/1.png), url(../src/svg/2.png);
     background-position: left center, right center, top center;
     background-size: 5rem, 5rem, 2rem;
     background-repeat: no-repeat;
@@ -85,13 +100,13 @@
     width: 100%;
     height: 5rem;
     margin-top: 2rem;
-    margin-bottom: 12rem;
+    margin-bottom: 6rem;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1rem;
     color: black;
   }
   main button {
-    width: 60%;
+    width: 50%;
     display: flex;
     border: none;
     justify-content: center;
