--- a/css/desktop.scss
+++ b/css/desktop.scss
@@ -5,6 +5,10 @@
         padding: 0;
         box-sizing: border-box;
     }
+
+    .hidden {
+        display: none !important;
+      }
     
     body {
         background-color: white;
@@ -79,6 +83,19 @@
             display: flex; // show the menu when the checkbox is checked
         }
     }
+
+    .ptag {
+        display: flex;
+        width: 100%;
+        padding-left: 10%;
+        padding-right: 10%;
+        text-align: center;
+        position: absolute;
+        color: white;
+        top: 23rem !important;
+        font-size: 1.5rem;
+        z-index: 1;
+    }
         
     main {
         width: 100%;
@@ -103,8 +120,8 @@
         section {
             background-image: 
                 url(../src/svg/1.png),
-                url(../src/svg/2.png),
-                url(../src/svg/3.png);
+                url(../src/svg/2.png);
+                // url(../src/svg/3.png);
         
             background-position: 
                 left center, 
@@ -118,9 +135,9 @@
             width: 100%;
             height: 5rem;
             margin-top: 2rem;
-            margin-bottom: 12rem;
+            margin-bottom: 6rem;
             text-align: center;
-            font-size: 2rem;
+            font-size: 1rem;
             color: black;
         }
     
@@ -150,7 +167,7 @@
         
     
         button {
-            width: 60%;
+            width: 50%;
             display: flex;
             border: none;
             justify-content: center;
