--- a/css/mobilemed.scss
+++ b/css/mobilemed.scss
@@ -5,6 +5,10 @@
         padding: 0;
         box-sizing: border-box;
     }
+
+    .hidden {
+        display: none !important;
+      }
     
     body {
         background-color: #FFFFFF;
@@ -95,6 +99,19 @@
           display: flex; // show the menu when the checkbox is checked
         }
     }
+
+    .ptag {
+        display: flex;
+        width: 100%;
+        padding-left: 10%;
+        padding-right: 10%;
+        text-align: center;
+        position: absolute;
+        color: white;
+        top: 15rem;
+        font-size: 1rem;
+        z-index: 1;
+    }
       
     main {
         width: 100%;
@@ -119,8 +136,8 @@
         section {
             background-image: 
                 url(../src/svg/1.png),
-                url(../src/svg/2.png),
-                url(../src/svg/3.png);
+                url(../src/svg/2.png);
+                // url(../src/svg/3.png);
         
             background-position: 
                 left center, 
@@ -130,14 +147,18 @@
             background-size: 5rem, 5rem, 2rem;
             background-repeat: no-repeat;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             width: 100%;
+            padding-left: 10%;
+            padding-right: 10%;
+            padding-top: 2.5%;
             height: 5rem;
             margin-top: 2rem;
             margin-bottom: 8rem;
             text-align: center;
-            font-size: 1.5rem;
+            font-size: 0.8rem;
             color: black;
         }
     
