--- a/css/tablet.scss
+++ b/css/tablet.scss
@@ -5,6 +5,10 @@
         padding: 0;
         box-sizing: border-box;
     }
+
+    .hidden {
+        display: none !important;
+      }
     
     body {
         background-color: white;
@@ -99,12 +103,25 @@
             font-size: 3rem;
             z-index: 1;
         }
+
+        .ptag {
+            display: flex;
+            width: 100%;
+            padding-left: 10%;
+            padding-right: 10%;
+            text-align: center;
+            position: absolute;
+            color: white;
+            top: 15rem;
+            font-size: 1.5rem;
+            z-index: 1;
+        }
     
         section {
             background-image: 
                 url(../src/svg/1.png),
-                url(../src/svg/2.png),
-                url(../src/svg/3.png);
+                url(../src/svg/2.png);
+                // url(../src/svg/3.png);
         
             background-position: 
                 left center, 
@@ -113,15 +130,23 @@
             background-size: 5rem, 5rem, 2rem;
             background-repeat: no-repeat;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-content: center;
             width: 100%;
+            padding-left: 10%;
+            padding-right: 10%;
+            padding-top: 2.5%;
             height: 5rem;
             margin-top: 2rem;
-            margin-bottom: 8rem;
+            margin-bottom: 4rem;
             text-align: center;
-            font-size: 1.5rem;
+            font-size: 0.8rem;
             color: black;
+
+            p {
+                margin-bottom: 1%;
+            }
         }
     
         // @media (min-height: 600px) { 
@@ -150,7 +175,7 @@
         
     
         button {
-            width: 60%;
+            width: 50%;
             display: flex;
             border: none;
             justify-content: center;
@@ -173,8 +198,6 @@
             margin-bottom: 0.5rem;
             margin-left: 5%;
 
-            
-    
             .kort {
                 width: 5rem;
                 height: 4.95rem;
