--- a/style.scss
+++ b/style.scss
@@ -1,248 +1,280 @@
 @media (max-width: 576px){
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.hidden {
+  display: none !important;
 }
 
 body {
-    background-color: #FFFFFF;
-    display: flex;
-    width: 100%;
-    height: 100%;
+  background-color: #FFFFFF;
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 header {
-    width: 100%;
-    height: 4rem;
-    background-color: #25282ef9;
-    position: fixed;
-    z-index: 2;
+  width: 100%;
+  height: 4rem;
+  background-color: #25282ef9;
+  position: fixed;
+  z-index: 2;
 
-    img {
-        display: flex;
-        width: 2.2rem;
-        height: 3rem;
-        margin-top: 0.5rem;
-        margin-left: 0.7rem;
-
-    }
+  img {
+    display: flex;
+    width: 2.2rem;
+    height: 3rem;
+    margin-top: 0.5rem;
+    margin-left: 0.7rem;
+  }
 }
 
 nav {
   
-    .menu-icon {
-      display: inline-block;
-      cursor: pointer;
-      font-size: 2.5em;
-      display: flex;
-      position: absolute;
-      top: 0.1rem;
-      margin-left: 85%;
-      color: #FFFFFF;
-    }
-  
-    input[type=checkbox] {
-      display: none; // hide the checkbox
-    }
-  
-    ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: none;
-      flex-direction: column;
-      width: 100%;
-      position: absolute;
-      margin-top: 0.5rem;
-      background-color: #333333e8;
-      z-index: 1;
-  
-      li {
-        a {
-          color: white;
-          text-decoration: none;
-          text-align: center;
-          margin: 0.2rem;
-          padding: 1em;
-          font-family: 'Jost', sans-serif;
-          font-size: 1rem;
-          display: block;
-        }
+  .menu-icon {
+    display: inline-block;
+    cursor: pointer;
+    font-size: 2.5em;
+    display: flex;
+    position: absolute;
+    top: 0.1rem;
+    margin-left: 85%;
+    color: #FFFFFF;
+  }
+
+  input[type=checkbox] {
+    display: none;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    margin-top: 0.5rem;
+    background-color: #333333e8;
+    z-index: 1;
+
+    li {
+      a {
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        margin: 0.2rem;
+        padding: 1em;
+        font-family: 'Jost', sans-serif;
+        font-size: 1rem;
+        display: block;
       }
     }
-  
-    input[type=checkbox]:checked ~ ul {
-      display: flex; // show the menu when the checkbox is checked
-    }
+  }
+
+  input[type=checkbox]:checked ~ ul {
+    display: flex;
+  }
+}
+
+.ptag {
+  display: flex;
+  width: 100%;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: center;
+  position: absolute;
+  color: white;
+  top: 8rem;
+  font-size: 1rem;
+  z-index: 1;
+}
+
+.ptag-short {
+  display: flex;
+  width: 100%;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: center;
+  position: absolute;
+  color: white;
+  top: 8rem;
+  font-size: 0.5rem;
+  z-index: 1;
 }
   
 main {
+  width: 100%;
+
+  img {
     width: 100%;
+    display: flex;
+    z-index: 1;
+  }
 
-    img {
-        width: 100%;
-        display: flex;
-        z-index: 1;
-    }
+  h1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    top: 5rem;
+    color: white;
+    z-index: 1;
+  }
 
-    h1 {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        position: absolute;
-        top: 5rem;
-        color: white;
-        z-index: 1;
-    }
+  section {
+    background-image: 
+    url(../src/svg/1.png),
+    url(../src/svg/2.png),
+    url(../src/svg/3.png);
 
+    background-position: 
+    left center, 
+    right center, 
+    top center;
+    background-size: 5rem, 5rem, 2rem;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding-left: 20%;
+    padding-right: 20%;  
+    padding-top: 10%;
+    height: 13rem;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    font-size: 0.7rem;
+    text-align: center;
+    color: black;
+  }
+
+  @media (min-height: 600px) { 
     section {
-      background-image: 
-      url(../src/svg/1.png),
-      url(../src/svg/2.png),
-      url(../src/svg/3.png);
+      margin-bottom: 2rem;
+    }
+  }
 
-      background-position: 
-      left center, 
-      right center, 
-      top center;
-      background-size: 5rem, 5rem, 2rem;
-      background-repeat: no-repeat;
+  @media (min-height: 670px) { 
+    section {
+      margin-bottom: 2rem;
+    }
+  }
+
+  @media (min-height: 730px) { 
+    section {
+      margin-bottom: 2rem;
+    }
+  }
+
+  @media (min-height: 810px) { 
+    section {
+      margin-bottom: 2rem;
+    }
+  }
+    
+  button {
+    width: 45%;
+    display: flex;
+    border: none;
+    justify-content: center;
+    background-color: transparent;
+    font-weight: bolder;
+    margin-bottom: 1rem;
+  }
+
+  .container {
+    width: 90%;
+    height: 3.5rem;
+    display: flex;
+    background: rgba(177, 168, 168, 0.22);
+    border-radius: 16px;
+    box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.6px);
+    -webkit-backdrop-filter: blur(6.6px);
+    border: 1px solid rgba(255, 255, 255, 0.57);
+    border-radius: 10px;
+    margin-bottom: 0.5rem;
+    margin-left: 5%;
+        
+
+  .kort {
+      width: 3rem;
+      height: 2.95rem;
       display: flex;
+      margin-top: 0.25rem;
+      margin-left: 0.25rem;
+      z-index: 1;
+      border-radius: 10px;
+      box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
+    }
+
+    .text {
+      margin-left: 3.5rem;
+      display: flex;
+      flex-direction: column;
       justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 5rem;
-      margin-bottom: 3rem;
-      text-align: center;
-      color: black;
     }
 
-    @media (min-height: 600px) { 
-        section {
-          margin-bottom: 6rem;
-        }
+    h4 {
+      margin-bottom: 0.3rem;
     }
 
-    @media (min-height: 670px) { 
-        section {
-          margin-bottom: 9rem;
-        }
+    p {         
+      font-size: 0.5rem;
+      font-weight: bold;
+      width: 80%;
     }
-
-    @media (min-height: 730px) { 
-        section {
-          margin-bottom: 14rem;
-        }
-    }
-
-    @media (min-height: 810px) { 
-        section {
-          margin-bottom: 18rem;
-        }
-    }
-    
-
-    button {
-        width: 45%;
-        display: flex;
-        border: none;
-        justify-content: center;
-        background-color: transparent;
-        font-weight: bolder;
-        margin-bottom: 1rem;
-   }
-
-    .container {
-        width: 90%;
-        height: 3.5rem;
-        display: flex;
-        background: rgba(177, 168, 168, 0.22);
-        border-radius: 16px;
-        box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(6.6px);
-        -webkit-backdrop-filter: blur(6.6px);
-        border: 1px solid rgba(255, 255, 255, 0.57);
-        border-radius: 10px;
-        margin-bottom: 0.5rem;
-        margin-left: 5%;
-        
-
-      .kort {
-            width: 3rem;
-            height: 2.95rem;
-            display: flex;
-            margin-top: 0.25rem;
-            margin-left: 0.25rem;
-            z-index: 1;
-            border-radius: 10px;
-            box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
-        
-      }
-
-        .text {
-            margin-left: 3.5rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        h4 {
-            margin-bottom: 0.3rem;
-        }
-
-        p {         
-            font-size: 0.5rem;
-            font-weight: bold;
-            width: 80%;
-        }
-    }
-    
+  }
 }
 
 footer {
-    width: 100%;
-    height: 5.2rem;
-    background-color: #25282edf;
-    position: fixed;
-    bottom: 0%;
-    left: 0%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 2;
+  width: 100%;
+  height: 5.2rem;
+  background-color: #25282edf;
+  position: fixed;
+  bottom: 0%;
+  left: 0%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 2;
 
-    img {
-        width: 3rem;
-        height: 5rem;
-        margin-bottom: 0.1rem;
-    }
+  img {
+    width: 3rem;
+    height: 5rem;
+    margin-bottom: 0.1rem;
+  }
 
-    p {
-        color: white;
-        font-family: 'Jost', sans-serif;
-        font-size: 0.6rem;
-    }
+  p {
+    color: white;
+    font-family: 'Jost', sans-serif;
+    font-size: 0.6rem;
+  }
 
-    a {
-      display: inline-block;
-      font-size: 2.5rem;
-      color: white;
-      text-decoration: none;
-      position: absolute;
-      left: 0.5rem;
-      bottom: 0.5rem;
-    }
+  a {
+    display: inline-block;
+    font-size: 2.5rem;
+    color: white;
+    text-decoration: none;
+    position: absolute;
+    left: 0.5rem;
+    bottom: 0.5rem;
+  }
 
-    a:hover {
-        color: #E4405F;
-    }
+  a:hover {
+    color: #E4405F;
+  }
 }
 
 @font-face {
-    font-family: Jost;
-    src: url(./Jost/static/Jost-ExtraLight.ttf);
+  font-family: Jost;
+  src: url(./Jost/static/Jost-ExtraLight.ttf);
 }
 }
