--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -6,23 +6,30 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  padding-top: 60px;
+  margin-top: 5rem;
 }
 
 header {
   width: 100%;
-  height: 60px;
+  height: 4rem;
   display: flex;
   align-items: center;
   position: absolute;
   top: 0;
   left: 0;
+  padding: 0 1rem;
 }
-header a {
+
+header::before, header::after {
+  content: ""; /* Create invisible blocks */
+  flex: 1; /* This will take up available space equally on either side of the home icon */
+}
+
+a {
   color: white;
   font-size: 1.5rem;
-  display: inline-flex;
-  margin: auto;
+  margin: 0;
+  z-index: 1;
 }
 
 .kontakt {
@@ -74,5 +81,5 @@ header a {
 }
 
 footer {
-  display: none !important;
+  display: none;
 }/*# sourceMappingURL=kontakt.css.map */
