--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
     background-color: #FFFFFF;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 110vh;
+    overflow-y: scroll;
   }
   header {
     width: 100%;
@@ -107,7 +108,7 @@
     z-index: 1;
   }
   main section {
-    background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
+    background-image: url(../src/svg/1.png), url(../src/svg/2.png);
     background-position: left center, right center, top center;
     background-size: 5rem, 5rem, 2rem;
     background-repeat: no-repeat;
@@ -118,10 +119,9 @@
     width: 100%;
     padding-left: 20%;
     padding-right: 20%;
-    padding-top: 10%;
+    padding-top: 2%;
     height: 13rem;
-    margin-top: 1rem;
-    margin-bottom: 3rem;
+    margin-top: 0rem;
     font-size: 0.7rem;
     text-align: center;
     color: black;
