--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,8 @@ body {
   background-color: #FFFFFF;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 110vh;
+  overflow-y: scroll;
 }
 
 header {
@@ -129,8 +130,8 @@ main {
   section {
     background-image: 
     url(../src/svg/1.png),
-    url(../src/svg/2.png),
-    url(../src/svg/3.png);
+    url(../src/svg/2.png);
+    // url(../src/svg/3.png);
 
     background-position: 
     left center, 
@@ -145,10 +146,9 @@ main {
     width: 100%;
     padding-left: 20%;
     padding-right: 20%;  
-    padding-top: 10%;
+    padding-top: 2%;
     height: 13rem;
-    margin-top: 1rem;
-    margin-bottom: 3rem;
+    margin-top: 0rem;
     font-size: 0.7rem;
     text-align: center;
     color: black;
