--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,12 @@
+@import url(./css/computer.css);
+@import url(./css/desktop.css);
+// @import url(./css/Evenemang.css);
+// @import url(./css/gallerie.css);
+// @import url(./css/kontakt.css);
+@import url(./css/mobilemed.css);
+// @import url(./css/omoss.css);
+@import url(./css/tablet.css);
+
 @media (max-width: 576px){
 
 * {
