--- a/css/Evenemang.css
+++ b/css/Evenemang.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: auto;
+  height: 180vh;
 }
 
 header {
@@ -23,6 +23,34 @@ header a {
   font-size: 1.5rem;
   margin: 0;
   z-index: 1;
+}
+
+.mainImage {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  color: white;
+  top: 15rem;
+  font-size: 5rem;
+  z-index: 1;
+}
+
+.head {
+  width: 100%;
+  font-size: 2.5rem;
+  color: white;
+  font-weight: 700;
+  z-index: 1;
+  margin-top: 25rem;
+  position: absolute;
+  text-align: center;
 }
 
 .container {
@@ -75,4 +103,60 @@ footer p {
   color: white;
   font-family: "Jost", sans-serif;
   font-size: 0.6rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  body {
+    height: 100vh !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  body {
+    height: 100vh !important;
+  }
+  h1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    color: white;
+    top: 10rem;
+    font-size: 3rem;
+    z-index: 1;
+  }
+  .head {
+    width: 100%;
+    font-size: 2.5rem;
+    color: white;
+    font-weight: 700;
+    z-index: 1;
+    margin-top: 20rem;
+    position: absolute;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 480px) {
+  body {
+    height: 110vh !important;
+  }
+  h1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    color: white;
+    top: 5rem;
+    font-size: 2rem;
+    z-index: 1;
+  }
+  .head {
+    width: 100%;
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 700;
+    z-index: 1;
+    margin-top: 10rem;
+    position: absolute;
+    text-align: center;
+  }
 }/*# sourceMappingURL=Evenemang.css.map */
