--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -5,8 +5,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  margin-top: 5rem;
+  height: 180vh;
+  margin-top: 0rem;
 }
 
 header {
@@ -23,6 +23,23 @@ header {
 header::before, header::after {
   content: ""; /* Create invisible blocks */
   flex: 1; /* This will take up available space equally on either side of the home icon */
+}
+
+.mainImage {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+.kontaktaoss {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  color: white;
+  top: 15rem;
+  font-size: 5rem;
+  z-index: 1;
 }
 
 a {
@@ -82,4 +99,17 @@ a {
 
 footer {
   display: none;
+}
+
+@media only screen and (max-width: 480px) {
+  .kontaktaoss {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    color: white;
+    top: 5rem;
+    font-size: 2rem;
+    z-index: 1;
+  }
 }/*# sourceMappingURL=kontakt.css.map */
