--- a/css/omoss.scss
+++ b/css/omoss.scss
@@ -2,6 +2,7 @@ body {
     width: 100%;
     height: auto;
     background-color: white;
+    flex-direction: column;
 }
 
 header {
@@ -23,6 +24,35 @@ header {
     }
 }
 
+.mainImage {
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: absolute;
+    color: white;
+    top: 15rem;
+    font-size: 5rem;
+    z-index: 1;
+}
+
+.head {
+    width: 100%;
+    font-size: 2.5rem;
+    color: white;
+    font-weight: 700;
+    z-index: 1;
+    margin-top: 25rem;
+    position: absolute;
+    text-align: center;
+
+}
+
 main {
     width: 90%;
     height: 200vh;
@@ -40,10 +70,6 @@ main {
     // -webkit-backdrop-filter: blur(5px);
     // border: 1px solid rgba(255, 255, 255, 0.3);
     font-weight: 400;
-
-    .head {
-        font-weight: 700;
-    }
 
     .image-container {
         display: flex;
@@ -117,6 +143,7 @@ footer {
 /* ... Your existing styles ... */
 
 @media only screen and (max-width: 768px) {
+
     main {
         width: 95%;
         padding-left: 2.5%;
@@ -143,11 +170,62 @@ footer {
     }
 }
 
+@media only screen and (max-width: 768px) {
+    body {
+        height: 500vh !important;
+    }
+}
+
+@media only screen and (max-width: 834px) {
+    body {
+        height: 190vh !important;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    body {
+        height: 160vh !important;
+    }
+}
+
 /* For phones */
 @media only screen and (max-width: 480px) {
 
+    body {
+        height: 400vh !important;
+    }
+
     header {
         height: 3rem;
+    }
+
+    .mainImage {
+        display: flex;
+        width: 100%;
+        height: auto;
+    }
+
+    h1 {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        position: absolute;
+        color: white;
+        top: 5rem;
+        font-size: 3rem;
+        z-index: 1;
+    }
+
+    .head {
+        width: 100%;
+        font-size: 2rem;
+        color: white;
+        font-weight: 700;
+        z-index: 1;
+        margin-top: 10rem;
+        position: absolute;
+        text-align: center;
+
     }
 
     a {
@@ -172,14 +250,19 @@ footer {
     }
 
     .value-box {
-        width: 90%; /* Increase this value as desired */
-        // margin-left: auto;
-        // margin-right: auto;
-        margin-bottom: 1rem; /* Increased from 20px to 25px */
+        width: 45% !important;
+        height: auto;
+        margin-bottom: 1rem;
     }
 
     footer {
         padding-top: 2rem; /* Adds padding to the top of the footer */
         padding-bottom: 2rem; /* Adds padding to the bottom of the footer */
+    }
+}
+
+@media only screen and (max-width: 393px) {
+    body {
+        height: 460vh !important;
     }
 }
