--- a/css/Evenemang.css
+++ b/css/Evenemang.css
@@ -1,22 +1,21 @@
 body {
-  font-family: "Arial", sans-serif;
+  width: 100%;
   background-color: #f4f4f4;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 180vh;
+  min-height: 100vh;
 }
 
 header {
   width: 100%;
-  height: 4rem;
+  height: 5rem;
+  background-color: rgba(37, 40, 46, 0.8941176471);
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0 1rem;
+  flex-direction: column;
+  z-index: 2;
 }
 header a {
   color: white;
@@ -29,6 +28,7 @@ header a {
   display: flex;
   width: 100%;
   height: auto;
+  display: flex;
 }
 
 h1 {
@@ -42,13 +42,22 @@ h1 {
   z-index: 1;
 }
 
+.main-content {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5.5rem;
+}
+
 .head {
   width: 100%;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   color: white;
   font-weight: 700;
   z-index: 1;
-  margin-top: 25rem;
+  margin-top: 23rem;
   position: absolute;
   text-align: center;
 }
@@ -62,10 +71,9 @@ h1 {
   backdrop-filter: blur(6.6px);
   -webkit-backdrop-filter: blur(6.6px);
   border: 1px solid rgba(255, 255, 255, 0.57);
-  margin-top: 5rem;
+  margin-top: 4rem;
   margin-bottom: -4rem;
   padding: 1rem;
-  transition: transform 0.3s ease;
 }
 
 .container:hover {
@@ -97,9 +105,24 @@ p {
   width: 80%;
 }
 
-footer p {
+footer {
+  width: 100%;
+  height: 5.2rem;
+  background-color: rgba(37, 40, 46, 0.8745098039);
+  position: relative;
   display: flex;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
+  z-index: 2;
+  text-align: center;
+}
+footer img {
+  width: 3rem;
+  height: 5rem;
+  margin-bottom: 0.1rem;
+}
+footer p {
   color: white;
   font-family: "Jost", sans-serif;
   font-size: 0.6rem;
@@ -136,9 +159,6 @@ footer p {
   }
 }
 @media only screen and (max-width: 480px) {
-  body {
-    height: 110vh !important;
-  }
   h1 {
     display: flex;
     justify-content: center;
