--- a/css/Evenemang.scss
+++ b/css/Evenemang.scss
@@ -1,22 +1,25 @@
 body {
-    font-family: 'Arial', sans-serif;
+    width: 100%;
+    // font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 180vh;
+    min-height: 100vh;
 }
 
 header {
     width: 100%;
-    height: 4rem;
+    height: 5rem;
+    background-color: #25282ee4;
+    // position: relative;
+    // bottom: 0%;
+    // left: 0%;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0 1rem;
+    flex-direction: column;
+    z-index: 2;
 
     a {
         color: white;
@@ -30,6 +33,8 @@ header {
     display: flex;
     width: 100%;
     height: auto;
+    display: flex;
+    
 }
 
 h1 {
@@ -43,13 +48,23 @@ h1 {
     z-index: 1;
 }
 
+.main-content {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5.5rem;
+}
+
+
 .head {
     width: 100%;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     color: white;
     font-weight: 700;
     z-index: 1;
-    margin-top: 25rem;
+    margin-top: 23rem;
     position: absolute;
     text-align: center;
 
@@ -64,10 +79,10 @@ h1 {
     backdrop-filter: blur(6.6px);
     -webkit-backdrop-filter: blur(6.6px);
     border: 1px solid rgba(255, 255, 255, 0.57);
-    margin-top: 5rem;
+    margin-top: 4rem;
     margin-bottom: -4rem;
     padding: 1rem;
-    transition: transform 0.3s ease;
+    // transition: transform 0.3s ease;
 }
 
 .container:hover {
@@ -100,30 +115,27 @@ p {
 }
 
 footer {
-    // width: 100%;
-    // height: 5.2rem;
-    // background-color: #25282edf;
-    // position: fixed;
-    // bottom: 0%;
-    // left: 0%;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // flex-direction: column;
-    // z-index: 2;
+    width: 100%;
+    height: 5.2rem;
+    background-color: #25282edf;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+    text-align: center;
   
-    // img {
-    //   width: 3rem;
-    //   height: 5rem;
-    //   margin-bottom: 0.1rem;
-    // }
+    img {
+      width: 3rem;
+      height: 5rem;
+      margin-bottom: 0.1rem;
+    }
   
     p {
-        display: flex;   
-        justify-content: center;
-        color: white;
-        font-family: 'Jost', sans-serif;
-        font-size: 0.6rem;
+      color: white;
+      font-family: 'Jost', sans-serif;
+      font-size: 0.6rem;
     }
 }
 
@@ -163,10 +175,6 @@ footer {
 }
 
 @media only screen and (max-width: 480px) {
-   
-    body {
-        height: 110vh !important;
-    }
 
     h1 {
         display: flex;
