--- a/css/computer.css
+++ b/css/computer.css
@@ -10,8 +10,9 @@
   body {
     background-color: white;
     display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: auto;
   }
   header {
     width: 100%;
@@ -61,6 +62,8 @@
   }
   main {
     width: 100%;
+    flex-grow: 1;
+    flex: 1 0 auto;
   }
   main img {
     width: 100%;
@@ -113,6 +116,7 @@
     margin-bottom: 1%;
   }
   main button {
+    color: black;
     width: 40%;
     display: flex;
     border: none;
@@ -162,13 +166,13 @@
     width: 90%;
   }
   footer {
+    flex-shrink: 0;
     width: 100%;
-    height: 8rem;
+    height: 14rem;
     background-color: #25282e;
-    position: fixed;
+    position: relative;
     display: flex;
-    bottom: 0%;
-    left: 0%;
+    margin-top: auto;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -185,13 +189,12 @@
     font-size: 0.6rem;
   }
   footer a {
-    display: inline-block;
+    position: absolute;
+    top: 60%; /* position it at the top */
+    left: 1%; /* position it to the left */
     font-size: 2.5rem;
     color: white;
     text-decoration: none;
-    position: absolute;
-    left: 0.5rem;
-    bottom: 0.5rem;
   }
   footer a:hover {
     color: #E4405F;
