--- a/css/computer.scss
+++ b/css/computer.scss
@@ -13,8 +13,9 @@
     body {
         background-color: white;
         display: flex;
+        flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: auto;
     }
     
     header {
@@ -85,6 +86,8 @@
         
     main {
         width: 100%;
+        flex-grow: 1;
+        flex: 1 0 auto;
     
         img {
             width: 100%;
@@ -174,6 +177,7 @@
         
     
         button {
+            color: black;
             width: 40%;
             display: flex;
             border: none;
@@ -231,13 +235,15 @@
     }
     
     footer {
+        flex-shrink: 0;
         width: 100%;
-        height: 8rem;
+        height: 14rem;
         background-color: #25282e;
-        position: fixed;
+        position: relative;
         display: flex;
-        bottom: 0%;
-        left: 0%;
+        // bottom: 0%;
+        // left: 0%;
+        margin-top: auto;
         align-items: center;
         justify-content: center;
         flex-direction: column;
@@ -256,13 +262,12 @@
         }
 
         a {
-            display: inline-block;
+            position: absolute;
+            top: 60%;       /* position it at the top */
+            left: 1%;      /* position it to the left */
             font-size: 2.5rem;
             color: white;
             text-decoration: none;
-            position: absolute;
-            left: 0.5rem;
-            bottom: 0.5rem;
         }
 
         a:hover {
