--- a/css/desktop.css
+++ b/css/desktop.css
@@ -10,8 +10,9 @@
   body {
     background-color: white;
     display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
   }
   header {
     width: 100%;
@@ -73,6 +74,7 @@
   }
   main {
     width: 100%;
+    flex-grow: 1;
   }
   main img {
     width: 100%;
@@ -158,10 +160,8 @@
     width: 100%;
     height: 8rem;
     background-color: rgba(37, 40, 46, 0.8745098039);
-    position: fixed;
+    position: static;
     display: flex;
-    bottom: 0%;
-    left: 0%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
