--- a/css/desktop.scss
+++ b/css/desktop.scss
@@ -13,8 +13,9 @@
     body {
         background-color: white;
         display: flex;
+        flex-direction: column;
         width: 100%;
-        height: 100%;
+        min-height: 100vh;
     }
     
     header {
@@ -99,6 +100,7 @@
         
     main {
         width: 100%;
+        flex-grow: 1;
     
         img {
             width: 100%;
@@ -229,10 +231,10 @@
         width: 100%;
         height: 8rem;
         background-color: #25282edf;
-        position: fixed;
+        position: static;
         display: flex;
-        bottom: 0%;
-        left: 0%;
+        // bottom: 0%;
+        // left: 0%;
         align-items: center;
         justify-content: center;
         flex-direction: column;
