--- a/css/footer.css
+++ b/css/footer.css
@@ -3,23 +3,144 @@
 @import url(./mobilemed.css);
 @import url(./tablet.css);
 @import url(../style.css);
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@media (max-width: 576px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  footer {
+    width: 100%;
+    height: 5.2rem;
+    background-color: #25282e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+    margin-top: auto;
+  }
+  footer img {
+    width: 3rem;
+    height: 5rem;
+    margin-bottom: 0.1rem;
+  }
+  footer p {
+    color: white;
+    font-family: "Jost", sans-serif;
+    font-size: 0.6rem;
+  }
 }
-
-header {
-  width: 100%;
-  height: 4rem;
-  background-color: rgba(37, 40, 46, 0.9764705882);
-  position: fixed;
-  z-index: 2;
+@media (min-width: 577px) and (max-width: 769px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  footer {
+    width: 100%;
+    height: 7rem;
+    background-color: #262e25;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+  }
+  footer img {
+    width: 3.5rem;
+    height: 5rem;
+    margin-bottom: 0.1rem;
+  }
+  footer p {
+    color: white;
+    font-family: "Jost", sans-serif;
+    font-size: 0.6rem;
+  }
 }
-header img {
-  display: flex;
-  width: 2.2rem;
-  height: 3rem;
-  margin-top: 0.5rem;
-  margin-left: 0.7rem;
+@media (min-width: 770px) and (max-width: 834px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  footer {
+    width: 100%;
+    height: 10rem;
+    background-color: #25282e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+  }
+  footer img {
+    width: 5rem;
+    height: 7rem;
+    margin-bottom: 0.1rem;
+  }
+  footer p {
+    color: white;
+    font-family: "Jost", sans-serif;
+    margin-bottom: 2rem;
+    font-size: 1rem;
+  }
+}
+@media (min-width: 835px) and (max-width: 1024px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  footer {
+    width: 100%;
+    height: 10rem;
+    background-color: #25282e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+    position: static;
+  }
+  footer img {
+    width: 5rem;
+    height: 7rem;
+    margin-bottom: 0.1rem;
+  }
+  footer p {
+    color: white;
+    font-family: "Jost", sans-serif;
+    font-size: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 1025px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  footer {
+    width: 100%;
+    height: 12rem;
+    background-color: #25282e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+    position: static;
+  }
+  footer img {
+    width: 5rem;
+    height: 7rem;
+    margin-bottom: 0.1rem;
+  }
+  footer p {
+    color: white;
+    font-family: "Jost", sans-serif;
+    font-size: 0.8rem;
+    margin-bottom: 1.5rem;
+  }
 }/*# sourceMappingURL=footer.css.map */
