--- a/css/header.css
+++ b/css/header.css
@@ -3,23 +3,118 @@
 @import url(./mobilemed.css);
 @import url(./tablet.css);
 @import url(../style.css);
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@media (max-width: 576px) {
+  header {
+    width: 100%;
+    height: 4rem;
+    background-color: rgba(37, 40, 46, 0.8941176471);
+    position: fixed;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+  }
+  header img {
+    display: flex;
+    width: 2.2rem;
+    height: 3rem;
+    margin-top: 0.5rem;
+    margin-left: 0.7rem;
+  }
+  header a {
+    color: white;
+    font-size: 1.5rem;
+    margin: auto;
+  }
 }
-
-header {
-  width: 100%;
-  height: 4rem;
-  background-color: rgba(37, 40, 46, 0.9764705882);
-  position: fixed;
-  z-index: 2;
+@media (min-width: 577px) and (max-width: 769px) {
+  header {
+    width: 100%;
+    height: 5rem;
+    background-color: rgba(37, 40, 46, 0.8941176471);
+    position: fixed;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+  }
+  header img {
+    display: flex;
+    width: 2.2rem;
+    height: 3rem;
+    margin-top: 0.5rem;
+    margin-left: 0.7rem;
+  }
+  header a {
+    color: white;
+    font-size: 2.5rem;
+    margin: auto;
+  }
 }
-header img {
-  display: flex;
-  width: 2.2rem;
-  height: 3rem;
-  margin-top: 0.5rem;
-  margin-left: 0.7rem;
+@media (min-width: 770px) and (max-width: 834px) {
+  header {
+    width: 100%;
+    height: 6rem;
+    background-color: rgba(37, 40, 46, 0.8941176471);
+    position: fixed;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+  }
+  header img {
+    display: flex;
+    width: 2.2rem;
+    height: 3rem;
+    margin-top: 0.5rem;
+    margin-left: 0.7rem;
+  }
+  header a {
+    color: white;
+    font-size: 2.5rem;
+    margin: auto;
+  }
+}
+@media (min-width: 835px) and (max-width: 1024px) {
+  header {
+    width: 100%;
+    height: 6rem;
+    background-color: rgba(37, 40, 46, 0.8941176471);
+    position: fixed;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+  }
+  header img {
+    display: flex;
+    width: 2.2rem;
+    height: 3rem;
+    margin-top: 0.5rem;
+    margin-left: 0.7rem;
+  }
+  header a {
+    color: white;
+    font-size: 2.5rem;
+    margin: auto;
+  }
+}
+@media (min-width: 1025px) {
+  header {
+    width: 100%;
+    height: 6rem;
+    background-color: rgba(37, 40, 46, 0.8941176471);
+    position: fixed;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+  }
+  header img {
+    display: flex;
+    width: 2.2rem;
+    height: 3rem;
+    margin-top: 0.5rem;
+    margin-left: 0.7rem;
+  }
+  header a {
+    color: white;
+    font-size: 2.5rem;
+    margin: auto;
+  }
 }/*# sourceMappingURL=header.css.map */
