--- a/css/header.scss
+++ b/css/header.scss
@@ -1,15 +1,12 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
+@media (max-width: 576px){
 header {
     width: 100%;
     height: 4rem;
-    background-color: #25282ef9;
+    background-color: #25282ee4;
     position: fixed;
     z-index: 2;
+    display: flex;
+    justify-content: center;
 
     img {
         display: flex;
@@ -17,7 +14,117 @@ header {
         height: 3rem;
         margin-top: 0.5rem;
         margin-left: 0.7rem;
+    }
 
+    a {
+        color: white;
+        font-size: 1.5rem;
+        margin: auto;
+    }
+}
+}
+
+@media (min-width: 577px) and (max-width: 769px) {
+    header {
+        width: 100%;
+        height: 5rem;
+        background-color: #25282ee4;
+        position: fixed;
+        z-index: 2;
+        display: flex;
+        justify-content: center;
+    
+        img {
+            display: flex;
+            width: 2.2rem;
+            height: 3rem;
+            margin-top: 0.5rem;
+            margin-left: 0.7rem;
+        }
+    
+        a {
+            color: white;
+            font-size: 2.5rem;
+            margin: auto;
+        }
+    }
+}
+
+@media (min-width: 770px) and (max-width: 834px) {
+    header {
+        width: 100%;
+        height: 6rem;
+        background-color: #25282ee4;
+        position: fixed;
+        z-index: 2;
+        display: flex;
+        justify-content: center;
+    
+        img {
+            display: flex;
+            width: 2.2rem;
+            height: 3rem;
+            margin-top: 0.5rem;
+            margin-left: 0.7rem;
+        }
+    
+        a {
+            color: white;
+            font-size: 2.5rem;
+            margin: auto;
+        }
+    }
+}
+
+@media (min-width: 835px) and (max-width: 1024px) {
+    header {
+        width: 100%;
+        height: 6rem;
+        background-color: #25282ee4;
+        position: fixed;
+        z-index: 2;
+        display: flex;
+        justify-content: center;
+    
+        img {
+            display: flex;
+            width: 2.2rem;
+            height: 3rem;
+            margin-top: 0.5rem;
+            margin-left: 0.7rem;
+        }
+    
+        a {
+            color: white;
+            font-size: 2.5rem;
+            margin: auto;
+        }
+    }
+}
+
+@media (min-width: 1025px) {
+    header {
+        width: 100%;
+        height: 6rem;
+        background-color: #25282ee4;
+        position: fixed;
+        z-index: 2;
+        display: flex;
+        justify-content: center;
+    
+        img {
+            display: flex;
+            width: 2.2rem;
+            height: 3rem;
+            margin-top: 0.5rem;
+            margin-left: 0.7rem;
+        }
+    
+        a {
+            color: white;
+            font-size: 2.5rem;
+            margin: auto;
+        }
     }
 }
 
