--- a/css/kontakt.scss
+++ b/css/kontakt.scss
@@ -1,23 +1,31 @@
 body {
-    font-family: 'Arial', sans-serif;
+    // font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 180vh;
-    margin-top: 0rem;
+    height: auto;
 }
 
 header {
     width: 100%;
-    height: 4rem;
+    height: 5rem;
+    background-color: #25282ee4;
     display: flex;
     align-items: center;
+    justify-content: center;
     position: absolute;
     top: 0;
     left: 0;
     padding: 0 1rem;
+
+    a {
+        color: white;
+        font-size: 1.5rem;
+        margin: 0;
+        z-index: 1;
+    }
 }
 
 header::before, header::after {
