--- a/css/omoss.scss
+++ b/css/omoss.scss
@@ -1,20 +1,23 @@
 body {
     width: 100%;
-    height: auto;
+    // font-family: 'Arial', sans-serif;
     background-color: white;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
 }
 
 header {
     width: 100%;
-    height: 4rem;
+    height: 5rem !important;
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 0;
-    left: 0;
     padding: 0 1rem;
+    background-color: #25282ee4;
+
 
     a {
         color: white;
@@ -54,6 +57,7 @@ h1 {
 }
 
 main {
+    flex: 1;
     width: 90%;
     height: 200vh;
     text-align: center;
@@ -130,13 +134,27 @@ main {
 }
 
 footer {
-
+    width: 100%;
+    height: 5.2rem;
+    background-color: #25282edf;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 2;
+    text-align: center;
+  
+    img {
+      width: 3rem;
+      height: 5rem;
+      margin-bottom: 0.1rem;
+    }
+  
     p {
-        display: flex;   
-        justify-content: center;
-        color: white;
-        font-family: 'Jost', sans-serif;
-        font-size: 0.6rem;
+      color: white;
+      font-family: 'Jost', sans-serif;
+      font-size: 0.6rem;
     }
 }
 
@@ -250,7 +268,7 @@ footer {
     }
 
     .value-box {
-        width: 45% !important;
+        width: 55% !important;
         height: auto;
         margin-bottom: 1rem;
     }
