--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@
   body {
     background-color: #FFFFFF;
     display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 110vh;
+    height: auto;
     overflow-y: scroll;
   }
   header {
@@ -96,6 +97,8 @@
   }
   main {
     width: 100%;
+    flex-grow: 1;
+    margin-bottom: 5.5rem;
   }
   main img {
     width: 100%;
@@ -153,6 +156,7 @@
 }
 @media (max-width: 576px) {
   main button {
+    color: black;
     width: 45%;
     display: flex;
     border: none;
@@ -202,10 +206,8 @@
   footer {
     width: 100%;
     height: 5.2rem;
-    background-color: rgba(37, 40, 46, 0.8745098039);
-    position: fixed;
-    bottom: 0%;
-    left: 0%;
+    background-color: rgba(37, 40, 46, 0.8941176471);
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -223,13 +225,12 @@
     font-size: 0.6rem;
   }
   footer a {
-    display: inline-block;
+    position: absolute;
+    top: 40%; /* position it at the top */
+    left: 1%; /* position it to the left */
     font-size: 2.5rem;
     color: white;
     text-decoration: none;
-    position: absolute;
-    left: 0.5rem;
-    bottom: 0.5rem;
   }
   footer a:hover {
     color: #E4405F;
