--- a/css/into.scss
+++ b/css/into.scss
@@ -174,8 +174,8 @@
     src: url(../Jost/static/Jost-ExtraLight.ttf);
   }
     
-@import url(./computer.css);
-@import url(./desktop.css);
-@import url(./mobilemed.css);
-@import url(./tablet.css);
-@import url(../style.css);
+// @import url(./computer.css);
+// @import url(./desktop.css);
+// @import url(./mobilemed.css);
+// @import url(./tablet.css);
+// @import url(../style.css);
