--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,3 @@
-@import url(./computer.css);
-@import url(./desktop.css);
-@import url(./mobilemed.css);
-@import url(./tablet.css);
-@import url(../style.css);
 @media (max-width: 576px) {
   body {
     display: flex;
@@ -18,6 +13,7 @@
     justify-content: center;
     flex-direction: column;
     z-index: 2;
+    position: static;
     margin-top: auto;
   }
   footer img {
@@ -46,6 +42,7 @@
     justify-content: center;
     flex-direction: column;
     z-index: 2;
+    position: static;
   }
   footer img {
     width: 3.5rem;
@@ -73,6 +70,7 @@
     justify-content: center;
     flex-direction: column;
     z-index: 2;
+    position: static;
   }
   footer img {
     width: 5rem;
@@ -135,12 +133,13 @@
   footer img {
     width: 5rem;
     height: 7rem;
-    margin-bottom: 0.1rem;
+    position: relative;
+    margin-bottom: 0.2rem;
   }
   footer p {
     color: white;
     font-family: "Jost", sans-serif;
     font-size: 0.8rem;
-    margin-bottom: 1.5rem;
+    position: static;
   }
 }/*# sourceMappingURL=footer.css.map */
