--- a/css/footer.scss
+++ b/css/footer.scss
@@ -19,6 +19,7 @@
         justify-content: center;
         flex-direction: column;
         z-index: 2;
+        position: static;
         margin-top: auto;
     
         img {
@@ -55,6 +56,7 @@
         justify-content: center;
         flex-direction: column;
         z-index: 2;
+        position: static;
     
         img {
             width: 3.5rem;
@@ -90,6 +92,7 @@
         justify-content: center;
         flex-direction: column;
         z-index: 2;
+        position: static;
     
         img {
             width: 5rem;
@@ -168,20 +171,21 @@
         img {
             width: 5rem;
             height: 7rem;
-            margin-bottom: 0.1rem;
+            position: relative;
+            margin-bottom: 0.2rem;
         }
     
         p {
             color: white;
             font-family: 'Jost', sans-serif;
             font-size: 0.8rem;
-            margin-bottom: 1.5rem;
+            position: static;
         }
     }
 }
 
-@import url(./computer.css);
-@import url(./desktop.css);
-@import url(./mobilemed.css);
-@import url(./tablet.css);
-@import url(../style.css);
+// @import url(./computer.css);
+// @import url(./desktop.css);
+// @import url(./mobilemed.css);
+// @import url(./tablet.css);
+// @import url(../style.css);
