--- a/css/mainEvent.scss
+++ b/css/mainEvent.scss
@@ -264,8 +264,8 @@
     }
 }
 
-@import url(./computer.css);
-@import url(./desktop.css);
-@import url(./mobilemed.css);
-@import url(./tablet.css);
-@import url(../style.css);
+// @import url(./computer.css);
+// @import url(./desktop.css);
+// @import url(./mobilemed.css);
+// @import url(./tablet.css);
+// @import url(../style.css);
