--- a/css/desktop.scss
+++ b/css/desktop.scss
@@ -1,4 +1,4 @@
-@media (min-width: 992px) { 
+@media (min-width: 835px) and (max-width: 1024px) { 
 
     * {
         margin: 0;
@@ -23,6 +23,7 @@
         height: 6rem;
         background-color: #25282ef9;
         position: fixed;
+        text-decoration: none;
         z-index: 2;
     
         img {
