--- a/css/footer.css
+++ b/css/footer.css
@@ -19,37 +19,18 @@
   footer img {
     width: 2.5rem;
     height: 4rem;
-    margin-bottom: 0.1rem;
+    margin-bottom: 0rem;
   }
   footer p {
     color: white;
     font-family: "Jost", sans-serif;
     font-size: 0.5rem;
     position: static;
-    margin-bottom: -3.5rem;
-  }
-  footer a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.5rem;
-    margin-left: 1rem;
-  }
-  footer .tag1 {
-    position: static;
-    margin-right: 95%;
-    margin-bottom: -1.7rem;
-  }
-  footer .tag2 {
-    position: static;
-    margin-right: 80%;
-    margin-bottom: 2rem;
-  }
-  footer a:hover {
-    color: #E4405F;
+    margin-bottom: 0rem;
   }
   .spacer {
     width: 100%;
-    height: 2rem;
+    height: 4rem;
     display: flex;
     position: relative;
   }
@@ -81,29 +62,11 @@
     font-family: "Jost", sans-serif;
     font-size: 0.8rem;
     position: static;
-    margin-bottom: -4rem;
-  }
-  footer a {
-    color: white;
-    text-decoration: none;
-    font-size: 2.5rem;
-  }
-  footer .tag1 {
-    position: static;
-    margin-right: 95%;
-    margin-bottom: -2.8rem;
-  }
-  footer .tag2 {
-    position: static;
-    margin-right: 85%;
-    margin-bottom: 2rem;
-  }
-  footer a:hover {
-    color: #E4405F;
+    margin-bottom: 0rem;
   }
   .spacer {
     width: 100%;
-    height: 5rem;
+    height: 8rem;
     display: flex;
     position: relative;
   }
@@ -135,29 +98,11 @@
     font-family: "Jost", sans-serif;
     font-size: 0.8rem;
     position: static;
-    margin-bottom: -3rem;
-  }
-  footer a {
-    color: white;
-    text-decoration: none;
-    font-size: 2.5rem;
-  }
-  footer .tag1 {
-    position: static;
-    margin-right: 95%;
-    margin-bottom: -2.8rem;
-  }
-  footer .tag2 {
-    position: static;
-    margin-right: 85%;
-    margin-bottom: 2rem;
-  }
-  footer a:hover {
-    color: #E4405F;
+    margin-bottom: 0rem;
   }
   .spacer {
     width: 100%;
-    height: 11rem;
+    height: 9rem;
     display: flex;
     position: relative;
   }
@@ -189,25 +134,7 @@
     font-family: "Jost", sans-serif;
     font-size: 0.8rem;
     position: static;
-    margin-bottom: -3rem;
-  }
-  footer a {
-    color: white;
-    text-decoration: none;
-    font-size: 2.5rem;
-  }
-  footer .tag1 {
-    position: static;
-    margin-right: 95%;
-    margin-bottom: -2.8rem;
-  }
-  footer .tag2 {
-    position: static;
-    margin-right: 85%;
-    margin-bottom: 2rem;
-  }
-  footer a:hover {
-    color: #E4405F;
+    margin-bottom: -1rem;
   }
   .spacer {
     width: 100%;
@@ -222,16 +149,23 @@
     flex-direction: column;
     min-height: 100vh;
   }
+  main {
+    flex-grow: 1;
+  }
   footer {
+    flex-shrink: 0;
     width: 100%;
     height: 12rem;
     background-color: #25282e;
     display: flex;
+    bottom: 0%;
+    left: 0%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     z-index: 2;
     position: static;
+    margin-top: auto;
   }
   footer img {
     width: 5rem;
@@ -244,30 +178,6 @@
     font-family: "Jost", sans-serif;
     font-size: 0.8rem;
     position: static;
-    margin-bottom: -3rem;
-  }
-  footer a {
-    color: white;
-    text-decoration: none;
-    font-size: 2.5rem;
-  }
-  footer .tag1 {
-    position: static;
-    margin-right: 95%;
-    margin-bottom: -2.8rem;
-  }
-  footer .tag2 {
-    position: static;
-    margin-right: 88%;
-    margin-bottom: 2rem;
-  }
-  footer a:hover {
-    color: #E4405F;
-  }
-  .spacer {
-    width: 100%;
-    height: 5rem;
-    display: flex;
-    position: relative;
+    margin-bottom: 3rem;
   }
 }/*# sourceMappingURL=footer.css.map */
