--- a/css/footer.scss
+++ b/css/footer.scss
@@ -25,7 +25,7 @@
         img {
             width: 2.5rem;
             height: 4rem;
-            margin-bottom: 0.1rem;
+            margin-bottom: 0rem;
         }
     
         p {
@@ -33,36 +33,36 @@
             font-family: 'Jost', sans-serif;
             font-size: 0.5rem;
             position: static;
-            margin-bottom: -3.5rem;
+            margin-bottom: 0rem;
         }
 
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 1.5rem;
-            margin-left: 1rem;
-        }
+        // a {
+        //     color: white;
+        //     text-decoration: none;
+        //     font-size: 1.5rem;
+        //     margin-left: 1rem;
+        // }
 
-        .tag1 {
-            position: static;
-            margin-right: 95%;
-            margin-bottom: -1.7rem;
-        }
+        // .tag1 {
+        //     position: static;
+        //     margin-right: 95%;
+        //     margin-bottom: -1.7rem;
+        // }
 
-        .tag2 {
-            position: static;
-            margin-right: 80%;
-            margin-bottom: 2rem;
-        }
+        // .tag2 {
+        //     position: static;
+        //     margin-right: 80%;
+        //     margin-bottom: 2rem;
+        // }
 
-        a:hover {
-            color: #E4405F;
-        }
+        // a:hover {
+        //     color: #E4405F;
+        // }
     }
     
     .spacer {
         width: 100%;
-        height: 2rem;
+        height: 4rem;
         display: flex;
         position: relative;
     }
@@ -101,35 +101,35 @@
             font-family: 'Jost', sans-serif;
             font-size: 0.8rem;
             position: static;
-            margin-bottom: -4rem;
+            margin-bottom: 0rem;
         }
 
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 2.5rem;
-        }
+        // a {
+        //     color: white;
+        //     text-decoration: none;
+        //     font-size: 2.5rem;
+        // }
 
-        .tag1 {
-            position: static;
-            margin-right: 95%;
-            margin-bottom: -2.8rem;
-        }
+        // .tag1 {
+        //     position: static;
+        //     margin-right: 95%;
+        //     margin-bottom: -2.8rem;
+        // }
 
-        .tag2 {
-            position: static;
-            margin-right: 85%;
-            margin-bottom: 2rem;
-        }
+        // .tag2 {
+        //     position: static;
+        //     margin-right: 85%;
+        //     margin-bottom: 2rem;
+        // }
 
-        a:hover {
-            color: #E4405F;
-        }
+        // a:hover {
+        //     color: #E4405F;
+        // }
     }
     
     .spacer {
         width: 100%;
-        height: 5rem;
+        height: 8rem;
         display: flex;
         position: relative;
     }
@@ -168,35 +168,35 @@
             font-family: 'Jost', sans-serif;
             font-size: 0.8rem;
             position: static;
-            margin-bottom: -3rem;
+            margin-bottom: 0rem;
         }
 
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 2.5rem;
-        }
+        // a {
+        //     color: white;
+        //     text-decoration: none;
+        //     font-size: 2.5rem;
+        // }
 
-        .tag1 {
-            position: static;
-            margin-right: 95%;
-            margin-bottom: -2.8rem;
-        }
+        // .tag1 {
+        //     position: static;
+        //     margin-right: 95%;
+        //     margin-bottom: -2.8rem;
+        // }
 
-        .tag2 {
-            position: static;
-            margin-right: 85%;
-            margin-bottom: 2rem;
-        }
+        // .tag2 {
+        //     position: static;
+        //     margin-right: 85%;
+        //     margin-bottom: 2rem;
+        // }
 
-        a:hover {
-            color: #E4405F;
-        }
+        // a:hover {
+        //     color: #E4405F;
+        // }
     }
     
     .spacer {
         width: 100%;
-        height: 11rem;
+        height: 9rem;
         display: flex;
         position: relative;
     }
@@ -235,30 +235,30 @@
             font-family: 'Jost', sans-serif;
             font-size: 0.8rem;
             position: static;
-            margin-bottom: -3rem;
+            margin-bottom: -1rem;
         }
 
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 2.5rem;
-        }
+        // a {
+        //     color: white;
+        //     text-decoration: none;
+        //     font-size: 2.5rem;
+        // }
 
-        .tag1 {
-            position: static;
-            margin-right: 95%;
-            margin-bottom: -2.8rem;
-        }
+        // .tag1 {
+        //     position: static;
+        //     margin-right: 95%;
+        //     margin-bottom: -2.8rem;
+        // }
 
-        .tag2 {
-            position: static;
-            margin-right: 85%;
-            margin-bottom: 2rem;
-        }
+        // .tag2 {
+        //     position: static;
+        //     margin-right: 85%;
+        //     margin-bottom: 2rem;
+        // }
 
-        a:hover {
-            color: #E4405F;
-        }
+        // a:hover {
+        //     color: #E4405F;
+        // }
     }
     
     .spacer {
@@ -276,20 +276,24 @@
         min-height: 100vh;
     }
     
-    // main {
-    //     flex-grow: 1;
-    // }
+    main {
+        flex-grow: 1;
+    }
     
     footer {
+        flex-shrink: 0;
         width: 100%;
         height: 12rem;
         background-color: #25282e;
         display: flex;
+        bottom: 0%;
+        left: 0%;
         align-items: center;
         justify-content: center;
         flex-direction: column;
         z-index: 2;
         position: static;
+        margin-top: auto;
     
         img {
             width: 5rem;
@@ -303,42 +307,36 @@
             font-family: 'Jost', sans-serif;
             font-size: 0.8rem;
             position: static;
-            margin-bottom: -3rem;
+            margin-bottom: 3rem;
         }
 
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 2.5rem;
-        }
+        // a {
+        //     color: white;
+        //     text-decoration: none;
+        //     font-size: 2.5rem;
+        // }
 
-        .tag1 {
-            position: static;
-            margin-right: 95%;
-            margin-bottom: -2.8rem;
-        }
+        // .tag1 {
+        //     position: static;
+        //     margin-right: 95%;
+        //     margin-bottom: -2.8rem;
+        // }
 
-        .tag2 {
-            position: static;
-            margin-right: 88%;
-            margin-bottom: 2rem;
-        }
+        // .tag2 {
+        //     position: static;
+        //     margin-right: 88%;
+        //     margin-bottom: 2rem;
+        // }
 
-        a:hover {
-            color: #E4405F;
-        }
+        // a:hover {
+        //     color: #E4405F;
+        // }
     }
 
-    .spacer {
-        width: 100%;
-        height: 5rem;
-        display: flex;
-        position: relative;
-    }
+    // .spacer {
+    //     width: 100%;
+    //     height: 5rem;
+    //     display: flex;
+    //     position: relative;
+    // }
 }
-
-// @import url(./computer.css);
-// @import url(./desktop.css);
-// @import url(./mobilemed.css);
-// @import url(./tablet.css);
-// @import url(../style.css);
