--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,9 @@
-@import url(./computer.css);
-@import url(./desktop.css);
-@import url(./mobilemed.css);
-@import url(./tablet.css);
-@import url(../style.css);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @media (max-width: 576px) {
   header {
     width: 100%;
@@ -17,8 +18,9 @@
     display: flex;
     width: 2.2rem;
     height: 3rem;
+    margin-right: 95%;
     margin-top: 0.5rem;
-    margin-left: 0.7rem;
+    margin-left: 2rem;
   }
   header a {
     color: white;
@@ -38,10 +40,11 @@
   }
   header img {
     display: flex;
-    width: 2.2rem;
-    height: 3rem;
+    width: 3.5rem;
+    height: 4rem;
+    margin-right: 95%;
     margin-top: 0.5rem;
-    margin-left: 0.7rem;
+    margin-left: 2rem;
   }
   header a {
     color: white;
@@ -61,10 +64,11 @@
   }
   header img {
     display: flex;
-    width: 2.2rem;
-    height: 3rem;
+    width: 3.5rem;
+    height: 4.5rem;
+    margin-right: 95%;
     margin-top: 0.5rem;
-    margin-left: 0.7rem;
+    margin-left: 2rem;
   }
   header a {
     color: white;
@@ -84,10 +88,11 @@
   }
   header img {
     display: flex;
-    width: 2.2rem;
-    height: 3rem;
+    width: 3.5rem;
+    height: 4.5rem;
+    margin-right: 95%;
     margin-top: 0.5rem;
-    margin-left: 0.7rem;
+    margin-left: 1.5rem;
   }
   header a {
     color: white;
@@ -107,10 +112,11 @@
   }
   header img {
     display: flex;
-    width: 2.2rem;
-    height: 3rem;
+    width: 3.2rem;
+    height: 4.5rem;
+    margin-right: 95%;
     margin-top: 0.5rem;
-    margin-left: 0.7rem;
+    margin-left: 1.5rem;
   }
   header a {
     color: white;
