--- a/css/mainEvent.scss
+++ b/css/mainEvent.scss
@@ -1,4 +1,54 @@
-@media (max-width: 576px){
+@media (min-width: 360px) and (max-width: 490px) {
+    .container {
+        width: 100%;
+        display: flex;
+        background: rgba(177, 168, 168, 0.22);
+        border-radius: 1rem;
+        box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.57);
+        margin-top: 1rem;
+        padding: 1rem;
+        position: relative;
+        z-index: 1;
+    }
+
+    .kort {
+        width: 5.5rem;
+        height: 5.5rem;
+        border-radius: 10px;
+        box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
+        margin-right: 1rem;
+    }
+
+    .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex: 1;
+        position: relative;
+    }
+
+    h4 {
+        font-size: 1rem;
+        margin-bottom: 4rem;
+    }
+
+    .textp {         
+        display: flex;
+        color: black;
+        position: absolute;
+        font-size: 0.8rem;
+        font-weight: 400;
+        max-width:90%;
+        margin-top: 1rem;
+        text-align: left;
+        top: 1rem;
+        overflow: hidden;
+        z-index: 2;
+    }
+}
+
+@media (min-width: 491px) and (max-width: 576px){
     .container {
         width: 100%;
         display: flex;
@@ -29,7 +79,7 @@
     }
 
     h4 {
-        font-size: 1.1rem;
+        font-size: 1.3rem;
         margin-bottom: 4rem;
     }
 
@@ -37,8 +87,8 @@
         display: flex;
         color: black;
         position: absolute;
-        font-size: 0.6rem;
-        font-weight: 700;
+        font-size: 1rem;
+        font-weight: 400;
         max-width:90%;
         margin-top: 1rem;
         text-align: left;
@@ -63,8 +113,8 @@
     }
 
     .kort {
-        width: 5rem;
-        height: 4.95rem;
+        width: 6rem;
+        height: 5.95rem;
         border-radius: 10px;
         box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
         margin-right: 1rem;
@@ -79,7 +129,7 @@
     }
 
     h4 {
-        font-size: 2rem;
+        font-size: 1.9rem;
         margin-bottom: 4rem;
     }
 
@@ -87,7 +137,7 @@
         display: flex;
         color: black;
         position: absolute;
-        font-size: 1.7rem;
+        font-size: 1.5rem;
         font-weight: 400;
         max-width:100%;
         margin-top: 1rem;
@@ -120,8 +170,8 @@
     }
 
     .kort {
-        width: 5rem;
-        height: 4.95rem;
+        width: 6rem;
+        height: 5.95rem;
         border-radius: 10px;
         box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
         margin-right: 1rem;
@@ -178,8 +228,8 @@
     }
 
     .kort {
-        width: 5rem;
-        height: 4.95rem;
+        width: 6rem;
+        height: 5.95rem;
         border-radius: 10px;
         box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
         margin-right: 1rem;
@@ -235,8 +285,8 @@
     }
 
     .kort {
-        width: 5rem;
-        height: 4.95rem;
+        width: 9rem;
+        height: 8.95rem;
         border-radius: 10px;
         box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
         margin-right: 1rem;
@@ -252,7 +302,7 @@
     }
 
     h4 {
-        font-size: 2rem;
+        font-size: 3rem;
         margin-bottom: 1rem;
     }
 
@@ -261,7 +311,7 @@
         color: black;
         position:static;
         font-size: 2rem;
-        font-weight: 600;
+        font-weight: 400;
         width: 90%;
         margin-top: 0rem;
         text-align: left;
