--- a/css/mobilemed.css
+++ b/css/mobilemed.css
@@ -1,4 +1,4 @@
-@media (min-width: 576px) {
+@media (min-width: 777px) and (max-width: 834px) {
   * {
     margin: 0;
     padding: 0;
@@ -28,18 +28,18 @@
     margin-left: 1rem;
   }
 }
-@media (min-width: 576px) and (min-width: 718px) {
+@media (min-width: 777px) and (max-width: 834px) and (min-width: 718px) {
   header img {
     width: 2rem;
     height: 3rem;
   }
 }
-@media (min-width: 576px) and (min-width: 718px) and (max-width: 720px) {
+@media (min-width: 777px) and (max-width: 834px) and (min-width: 718px) and (max-width: 720px) {
   header {
     height: 4rem !important;
   }
 }
-@media (min-width: 576px) {
+@media (min-width: 777px) and (max-width: 834px) {
   nav .menu-icon {
     display: none;
   }
@@ -61,13 +61,13 @@
     margin-left: 40%;
   }
 }
-@media (min-width: 576px) and (min-width: 718px) {
+@media (min-width: 777px) and (max-width: 834px) and (min-width: 718px) {
   nav ul {
     top: 0.5rem;
     margin-left: 35%;
   }
 }
-@media (min-width: 576px) {
+@media (min-width: 777px) and (max-width: 834px) {
   nav ul li a {
     color: white;
     text-decoration: none;
@@ -132,13 +132,13 @@
     color: black;
   }
 }
-@media (min-width: 576px) and (min-width: 718px) {
+@media (min-width: 777px) and (max-width: 834px) and (min-width: 718px) {
   main section {
     margin-top: 0.5rem;
     margin-bottom: 2rem;
   }
 }
-@media (min-width: 576px) {
+@media (min-width: 777px) and (max-width: 834px) {
   main button {
     width: 50%;
     display: flex;
@@ -202,45 +202,47 @@
     z-index: 2;
   }
 }
-@media (min-width: 576px) and (min-width: 718px) {
+@media (min-width: 777px) and (max-width: 834px) and (min-width: 718px) {
   footer {
     height: 4rem;
   }
 }
-@media (min-width: 576px) {
+@media (min-width: 777px) and (max-width: 834px) {
   footer img {
     width: 5rem;
     height: 7rem;
     margin-bottom: 0.1rem;
   }
 }
-@media (min-width: 576px) and (min-width: 718px) {
+@media (min-width: 777px) and (max-width: 834px) and (min-width: 718px) {
   footer img {
     width: 2.5rem;
     height: 3.5rem;
   }
 }
-@media (min-width: 576px) {
+@media (min-width: 777px) and (max-width: 834px) {
   footer p {
     color: white;
     font-family: "Jost", sans-serif;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
+    position: static;
+    margin-bottom: -3.5rem;
   }
-}
-@media (min-width: 576px) and (min-width: 718px) {
-  footer p {
-    font-size: 0.3rem;
-  }
-}
-@media (min-width: 576px) {
   footer a {
-    display: inline-block;
-    font-size: 2.5rem;
     color: white;
     text-decoration: none;
-    position: absolute;
-    left: 0.5rem;
-    bottom: 0.5rem;
+    font-size: 1.5rem;
+    margin-left: 1rem;
+  }
+  footer .tag1 {
+    position: static;
+    margin-right: 95%;
+    margin-bottom: -1.7rem;
+  }
+  footer .tag2 {
+    position: static;
+    margin-right: 85%;
+    margin-bottom: 2rem;
   }
   footer a:hover {
     color: #E4405F;
