--- a/css/tabletsmall.css
+++ b/css/tabletsmall.css
@@ -1,8 +1,4 @@
-@import url(./css/computer.css);
-@import url(./css/desktop.css);
-@import url(./css/mobilemed.css);
-@import url(./css/tablet.css);
-@media (max-width: 576px) {
+@media (min-width: 577px) and (max-width: 769px) {
   * {
     margin: 0;
     padding: 0;
@@ -12,99 +8,59 @@
     display: none !important;
   }
   body {
-    background-color: #FFFFFF;
+    background-color: white;
     display: flex;
-    flex-direction: column;
     width: 100%;
-    height: auto;
-    overflow-y: scroll;
+    height: 100%;
   }
   header {
     width: 100%;
-    height: 4rem;
-    background-color: rgba(37, 40, 46, 0.9764705882);
+    height: 6rem;
+    background-color: rgba(37, 40, 46, 0.8941176471);
     position: fixed;
     z-index: 2;
   }
   header img {
     display: flex;
-    width: 2.2rem;
-    height: 3rem;
+    width: 3.6rem;
+    height: 5rem;
     margin-top: 0.5rem;
-    margin-left: 0.7rem;
-  }
-  nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: 1rem;
   }
   nav .menu-icon {
-    display: flex;
-    cursor: pointer;
-    font-size: 2.5em;
-    display: flex;
-    position: absolute;
-    top: 0.1rem;
-    justify-content: center;
-    align-items: center;
-    color: #FFFFFF;
+    display: none;
   }
   nav input[type=checkbox] {
     display: none;
   }
   nav ul {
-    list-style: none;
     margin: 0;
     padding: 0;
-    display: none;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
     width: 100%;
     position: absolute;
-    margin-top: 20rem;
-    background-color: rgba(51, 51, 51, 0.9098039216);
+    background-color: transparent;
     z-index: 1;
+    position: absolute;
+    top: 1rem;
+    margin-left: 45%;
   }
   nav ul li a {
     color: white;
     text-decoration: none;
     text-align: center;
     margin: 0.2rem;
-    padding: 1em;
+    padding: 0.5em;
     font-family: "Jost", sans-serif;
-    font-size: 1rem;
+    font-size: 1.3rem;
     display: block;
   }
   nav input[type=checkbox]:checked ~ ul {
     display: flex;
   }
-  .ptag {
-    display: flex;
-    width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    text-align: left;
-    position: absolute;
-    color: white;
-    top: 8rem;
-    font-size: 1rem;
-    z-index: 1;
-  }
-  .ptag-short {
-    display: flex;
-    width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    text-align: left;
-    position: absolute;
-    color: white;
-    top: 8rem;
-    font-size: 0.5rem;
-    z-index: 1;
-  }
   main {
     width: 100%;
-    flex-grow: 1;
-    margin-bottom: 5.5rem;
   }
   main img {
     width: 100%;
@@ -116,8 +72,21 @@
     justify-content: center;
     width: 100%;
     position: absolute;
-    top: 5rem;
     color: white;
+    top: 10rem;
+    font-size: 3rem;
+    z-index: 1;
+  }
+  main .ptag {
+    display: flex;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+    position: absolute;
+    color: white;
+    top: 15rem;
+    font-size: 1.5rem;
     z-index: 1;
   }
   main section {
@@ -128,53 +97,34 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     width: 100%;
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 2%;
-    height: 13rem;
-    margin-top: 0rem;
-    font-size: 0.7rem;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 2.5%;
+    height: 5rem;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
     text-align: center;
+    font-size: 0.8rem;
     color: black;
-    text-align: left;
   }
-}
-@media (max-width: 576px) and (min-height: 600px) {
-  main section {
-    margin-bottom: 2rem;
+  main section p {
+    margin-bottom: 1%;
   }
-}
-@media (max-width: 576px) and (min-height: 670px) {
-  main section {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 576px) and (min-height: 730px) {
-  main section {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 576px) and (min-height: 810px) {
-  main section {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 576px) {
   main button {
-    color: black;
-    width: 45%;
+    width: 50%;
     display: flex;
     border: none;
     justify-content: center;
     background-color: transparent;
     font-weight: bolder;
+    font-size: 2rem;
     margin-bottom: 1rem;
   }
   main .container {
     width: 90%;
-    height: 3.5rem;
+    height: 5.5rem;
     display: flex;
     background: rgba(177, 168, 168, 0.22);
     border-radius: 16px;
@@ -187,8 +137,8 @@
     margin-left: 5%;
   }
   main .container .kort {
-    width: 3rem;
-    height: 2.95rem;
+    width: 5rem;
+    height: 4.95rem;
     display: flex;
     margin-top: 0.25rem;
     margin-left: 0.25rem;
@@ -204,26 +154,29 @@
   }
   main .container h4 {
     margin-bottom: 0.3rem;
+    font-size: 1.9rem;
   }
   main .container p {
-    font-size: 0.5rem;
+    font-size: 1rem;
     font-weight: bold;
-    width: 80%;
+    width: 90%;
   }
   footer {
     width: 100%;
-    height: 5.2rem;
-    background-color: rgba(37, 40, 46, 0.8941176471);
-    position: relative;
+    height: 8rem;
+    background-color: rgba(37, 40, 46, 0.8745098039);
+    position: fixed;
     display: flex;
+    bottom: 0%;
+    left: 0%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     z-index: 2;
   }
   footer img {
-    width: 3rem;
-    height: 5rem;
+    width: 5rem;
+    height: 7rem;
     margin-bottom: 0.1rem;
   }
   footer p {
@@ -236,18 +189,18 @@
   footer a {
     color: white;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin-left: 1rem;
   }
   footer .tag1 {
     position: static;
     margin-right: 95%;
-    margin-bottom: -1.7rem;
+    margin-bottom: -2.9rem;
   }
   footer .tag2 {
     position: static;
     margin-right: 80%;
-    margin-bottom: 2rem;
+    margin-bottom: 1.3rem;
   }
   footer a:hover {
     color: #E4405F;
@@ -256,4 +209,4 @@
     font-family: Jost;
     src: url(./Jost/static/Jost-ExtraLight.ttf);
   }
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=tabletsmall.css.map */
