--- a/css/tabletsmall.scss
+++ b/css/tabletsmall.scss
@@ -1,4 +1,4 @@
-@media (min-width: 777px) and (max-width: 834px){
+@media (min-width: 577px) and (max-width: 769px) { 
 
     * {
         margin: 0;
@@ -11,7 +11,7 @@
       }
     
     body {
-        background-color: #FFFFFF;
+        background-color: white;
         display: flex;
         width: 100%;
         height: 100%;
@@ -30,89 +30,60 @@
             height: 5rem;
             margin-top: 0.5rem;
             margin-left: 1rem;
-
-            @media (min-width: 718px) {
-                width: 2rem;
-                height: 3rem;
-            }
     
-        }
-
-        @media (min-width: 718px) and (max-width: 720px) { 
-
-            height: 4rem !important;
-            
         }
     }
     
     nav {
-      
+        
         .menu-icon {
         //   display: inline-block;
         //   cursor: pointer;
         //   font-size: 4.5em;
-          display: none;
+            display: none;
         //   position: absolute;
         //   top: -0.5rem;
         //   margin-left: 85%;
         //   color: #FFFFFF;
         }
-      
+        
         input[type=checkbox] {
-          display: none;
+            display: none;
         }
-      
+        
         ul {
-          list-style: none;
-          margin: 0;
-          padding: 0;
-          display: flex;
-          flex-direction: row;
-          width: 100%;
-          position: absolute;
-          background-color: transparent;
-          z-index: 1;
-          position: absolute;
-          top: 1rem;
-          margin-left: 40%;    
-          
-          @media (min-width: 718px) {
-            top: 0.5rem;
-            margin-left: 35%;
-          }
-           
-          li {
+        //   list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            position: absolute;
+            background-color: transparent;
+            z-index: 1;
+            position: absolute;
+            top: 1rem;
+            margin-left: 45%;     
+            
+            li {
             a {
-              color: white;
-              text-decoration: none;
-              text-align: center;
-              margin: 0.2rem;
-              padding: 0.5em;
-              font-family: 'Jost', sans-serif;
-              font-size: 1.3rem;
-              display: block;
+                color: white;
+                text-decoration: none;
+                text-align: center;
+                margin: 0.2rem;
+                padding: 0.5em;
+                font-family: 'Jost', sans-serif;
+                font-size: 1.3rem;
+                display: block;
             }
-          }
+            }
         }
-      
+        
         input[type=checkbox]:checked ~ ul {
-          display: flex; // show the menu when the checkbox is checked
+            display: flex; // show the menu when the checkbox is checked
         }
     }
-
-    .ptag {
-        display: flex;
-        width: 100%;
-        padding-left: 10%;
-        padding-right: 10%;
-        text-align: center;
-        position: absolute;
-        color: white;
-        top: 15rem;
-        font-size: 1rem;
-        z-index: 1;
-    }
-      
+        
     main {
         width: 100%;
     
@@ -132,6 +103,19 @@
             font-size: 3rem;
             z-index: 1;
         }
+
+        .ptag {
+            display: flex;
+            width: 100%;
+            padding-left: 10%;
+            padding-right: 10%;
+            text-align: center;
+            position: absolute;
+            color: white;
+            top: 15rem;
+            font-size: 1.5rem;
+            z-index: 1;
+        }
     
         section {
             background-image: 
@@ -143,23 +127,26 @@
                 left center, 
                 right center, 
                 top center;
-                
             background-size: 5rem, 5rem, 2rem;
             background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-content: center;
             width: 100%;
             padding-left: 10%;
             padding-right: 10%;
             padding-top: 2.5%;
             height: 5rem;
             margin-top: 2rem;
-            margin-bottom: 8rem;
+            margin-bottom: 4rem;
             text-align: center;
             font-size: 0.8rem;
             color: black;
+
+            p {
+                margin-bottom: 1%;
+            }
         }
     
         // @media (min-height: 600px) { 
@@ -185,14 +172,6 @@
         //       margin-bottom: 18rem;
         //     }
         // }
-
-        @media (min-width: 718px) { 
-
-            section {
-                margin-top: 0.5rem;
-                margin-bottom: 2rem;
-            }
-        }
         
     
         button {
@@ -204,7 +183,7 @@
             font-weight: bolder;
             font-size: 2rem;
             margin-bottom: 1rem;
-       }
+        }
     
         .container {
             width: 90%;
@@ -218,9 +197,8 @@
             border-radius: 10px;
             margin-bottom: 0.5rem;
             margin-left: 5%;
-            
-    
-          .kort {
+
+            .kort {
                 width: 5rem;
                 height: 4.95rem;
                 display: flex;
@@ -230,7 +208,7 @@
                 border-radius: 10px;
                 box-shadow: 0 16px 60px rgba(0, 0, 0, 0.1);
             
-          }
+            }
     
             .text {
                 margin-left: 3.5rem;
@@ -265,20 +243,11 @@
         justify-content: center;
         flex-direction: column;
         z-index: 2;
-
-        @media (min-width: 718px) {
-            height: 4rem;
-        }
     
         img {
             width: 5rem;
             height: 7rem;
             margin-bottom: 0.1rem;
-
-            @media (min-width: 718px) {
-                width: 2.5rem;
-                height: 3.5rem;
-            }
         }
     
         p {
@@ -288,26 +257,26 @@
             position: static;
             margin-bottom: -3.5rem;
         }
-        
+
         a {
             color: white;
             text-decoration: none;
-            font-size: 1.5rem;
+            font-size: 2.5rem;
             margin-left: 1rem;
         }
-        
+
         .tag1 {
             position: static;
             margin-right: 95%;
-            margin-bottom: -1.7rem;
+            margin-bottom: -2.9rem;
         }
-        
+
         .tag2 {
             position: static;
-            margin-right: 85%;
-            margin-bottom: 2rem;
+            margin-right: 80%;
+            margin-bottom: 1.3rem;
         }
-        
+
         a:hover {
             color: #E4405F;
         }
@@ -317,4 +286,5 @@
         font-family: Jost;
         src: url(./Jost/static/Jost-ExtraLight.ttf);
     }
-}
+    
+ }
