--- a/css/gallerie.scss
+++ b/css/gallerie.scss
@@ -24,7 +24,7 @@
     }
 
     .grid {
-        background-image: url(../src/gold.jpeg);
+        background-image: url(../src/gold.jpg);
         background-repeat: no-repeat;
         display: flex;
         flex-wrap: wrap;
