--- a/css/header.scss
+++ b/css/header.scss
@@ -23,11 +23,11 @@ header {
         margin-left: 2rem;
     }
 
-    a {
-        color: white;
-        font-size: 1.5rem;
-        margin: auto;
-    }
+    // a {
+    //     color: white;
+    //     font-size: 1.5rem;
+    //     margin: auto;
+    // }
 }
 }
 
@@ -50,11 +50,11 @@ header {
             margin-left: 2rem;
         }
     
-        a {
-            color: white;
-            font-size: 2.5rem;
-            margin: auto;
-        }
+        // a {
+        //     color: white;
+        //     font-size: 2.5rem;
+        //     margin: auto;
+        // }
     }
 }
 
@@ -77,11 +77,11 @@ header {
             margin-left: 2rem;
         }
     
-        a {
-            color: white;
-            font-size: 2.5rem;
-            margin: auto;
-        }
+        // a {
+        //     color: white;
+        //     font-size: 2.5rem;
+        //     margin: auto;
+        // }
     }
 }
 
@@ -104,11 +104,11 @@ header {
             margin-left: 1.5rem;
         }
     
-        a {
-            color: white;
-            font-size: 2.5rem;
-            margin: auto;
-        }
+        // a {
+        //     color: white;
+        //     font-size: 2.5rem;
+        //     margin: auto;
+        // }
     }
 }
 
@@ -131,11 +131,13 @@ header {
             margin-left: 1.5rem;
         }
     
-        a {
-            color: white;
-            font-size: 2.5rem;
-            margin: auto;
-        }
+        // a {
+        //     color: white;
+        //     font-size: 2.5rem;
+        //     display: flex;
+        //     margin-right: 95%;
+        //     align-items: center;
+        // }
     }
 }
 
