--- a/css/main.css
+++ b/css/main.css
@@ -10,60 +10,6 @@
 }
 
 @media (min-width: 360px) and (max-width: 490px) {
-  nav {
-    display: flex;
-    justify-content: right;
-    align-items: baseline;
-    position: relative;
-    width: 100%;
-    height: 0;
-  }
-  nav .menu-icon {
-    cursor: pointer;
-    font-size: 3em;
-    color: #FFFFFF;
-    position: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 3;
-    margin-top: -0.2rem;
-  }
-  nav input[type=checkbox] {
-    display: none;
-  }
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    position: absolute;
-    top: 4rem; /* Adjust this value as needed */
-    background-color: rgba(51, 51, 51, 0.9098039216);
-    z-index: 2;
-    height: calc(100vh - 10.2rem); /* Adjust to stop at the footer */
-    overflow-y: auto;
-  }
-  nav ul li {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  }
-  nav ul li li:last-child {
-    border-bottom: none;
-  }
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    margin: 0.2rem;
-    padding: 1em;
-    font-family: "Jost", sans-serif;
-    font-size: 2.5rem;
-    display: block;
-  }
-  nav input[type=checkbox]:checked ~ ul {
-    display: flex;
-  }
   main img {
     display: flex;
     width: 100%;
@@ -100,9 +46,8 @@
     text-align: center;
     position: absolute;
     color: white;
-    top: 9rem;
-    font-size: 1rem;
-    z-index: 1;
+    top: 10rem;
+    font-size: 0.8rem;
   }
   main section {
     background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
@@ -251,60 +196,6 @@
   }
 }
 @media (min-width: 491px) and (max-width: 576px) {
-  nav {
-    display: flex;
-    justify-content: right;
-    align-items: baseline;
-    position: relative;
-    width: 100%;
-    height: 0;
-  }
-  nav .menu-icon {
-    cursor: pointer;
-    font-size: 3em;
-    color: #FFFFFF;
-    position: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 3;
-    margin-top: -0.2rem;
-  }
-  nav input[type=checkbox] {
-    display: none;
-  }
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    position: absolute;
-    top: 4rem; /* Adjust this value as needed */
-    background-color: rgba(51, 51, 51, 0.9098039216);
-    z-index: 2;
-    height: calc(100vh - 10.2rem); /* Adjust to stop at the footer */
-    overflow-y: auto;
-  }
-  nav ul li {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  }
-  nav ul li li:last-child {
-    border-bottom: none;
-  }
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    margin: 0.2rem;
-    padding: 1em;
-    font-family: "Jost", sans-serif;
-    font-size: 2.5rem;
-    display: block;
-  }
-  nav input[type=checkbox]:checked ~ ul {
-    display: flex;
-  }
   main img {
     display: flex;
     width: 100%;
@@ -314,7 +205,7 @@
     display: flex;
     width: 100%;
     font-size: 3rem;
-    top: 7rem;
+    top: 6rem;
     color: white;
     justify-content: center;
     position: absolute;
@@ -343,7 +234,6 @@
     color: white;
     top: 12rem;
     font-size: 1rem;
-    z-index: 1;
   }
   main section {
     background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
@@ -492,39 +382,6 @@
   }
 }
 @media (min-width: 577px) and (max-width: 769px) {
-  nav {
-    height: 0;
-  }
-  nav .menu-icon {
-    display: none;
-  }
-  nav input[type=checkbox] {
-    display: none;
-  }
-  nav ul {
-    list-style: none;
-    display: flex;
-    position: relative;
-    justify-content: end;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-    width: 100%;
-    background-color: transparent;
-    z-index: 2;
-    top: 1.7rem;
-  }
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    margin: 0.2rem;
-    padding: 0.5em;
-    font-family: "Jost", sans-serif;
-    font-size: 1.3rem;
-  }
-  nav input[type=checkbox]:checked ~ ul {
-    display: flex;
-  }
   main img {
     display: flex;
     width: 100%;
@@ -533,7 +390,7 @@
   main h1 {
     display: flex;
     width: 100%;
-    font-size: 4rem;
+    font-size: 3.9rem;
     top: 10rem;
     color: white;
     justify-content: center;
@@ -549,7 +406,7 @@
     text-align: center;
     position: absolute;
     color: white;
-    top: 20rem;
+    top: 15rem;
     font-size: 1rem;
     z-index: 1;
   }
@@ -563,7 +420,6 @@
     color: white;
     top: 17rem;
     font-size: 1rem;
-    z-index: 1;
   }
   main section {
     background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
@@ -577,10 +433,10 @@
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 12%;
+    padding-top: 15%;
     height: 10rem;
-    margin-top: 2rem;
-    margin-bottom: 8rem;
+    margin-top: 3rem;
+    margin-bottom: 10rem;
     text-align: center;
     font-size: 1rem;
     color: black;
@@ -712,39 +568,6 @@
   }
 }
 @media (min-width: 770px) and (max-width: 834px) {
-  nav {
-    height: 0;
-  }
-  nav .menu-icon {
-    display: none;
-  }
-  nav input[type=checkbox] {
-    display: none;
-  }
-  nav ul {
-    list-style: none;
-    display: flex;
-    position: relative;
-    justify-content: end;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-    width: 100%;
-    background-color: transparent;
-    z-index: 2;
-    top: 2rem;
-  }
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    margin: 0.2rem;
-    padding: 0.5em;
-    font-family: "Jost", sans-serif;
-    font-size: 1.3rem;
-  }
-  nav input[type=checkbox]:checked ~ ul {
-    display: flex;
-  }
   main img {
     display: flex;
     width: 100%;
@@ -771,7 +594,6 @@
     color: white;
     top: 20rem;
     font-size: 1rem;
-    z-index: 1;
   }
   main section {
     background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
@@ -785,10 +607,10 @@
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 2.5%;
+    padding-top: 5.5%;
     height: 10rem;
     margin-top: 2rem;
-    margin-bottom: 8rem;
+    margin-bottom: 12rem;
     text-align: center;
     font-size: 1rem;
     color: black;
@@ -914,39 +736,6 @@
   }
 }
 @media (min-width: 835px) and (max-width: 1024px) {
-  nav {
-    height: 0;
-  }
-  nav .menu-icon {
-    display: none;
-  }
-  nav input[type=checkbox] {
-    display: none;
-  }
-  nav ul {
-    list-style: none;
-    display: flex;
-    position: relative;
-    justify-content: end;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-    width: 100%;
-    background-color: transparent;
-    z-index: 2;
-    top: 2rem;
-  }
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    margin: 0.2rem;
-    padding: 0.5em;
-    font-family: "Jost", sans-serif;
-    font-size: 1.5rem;
-  }
-  nav input[type=checkbox]:checked ~ ul {
-    display: flex;
-  }
   main img {
     display: flex;
     width: 100%;
@@ -973,7 +762,6 @@
     color: white;
     top: 20rem;
     font-size: 1.3rem;
-    z-index: 1;
   }
   main section {
     background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
@@ -1116,39 +904,6 @@
   }
 }
 @media (min-width: 1025px) {
-  nav {
-    height: 0;
-  }
-  nav .menu-icon {
-    display: none;
-  }
-  nav input[type=checkbox] {
-    display: none;
-  }
-  nav ul {
-    list-style: none;
-    display: flex;
-    position: fixed;
-    justify-content: end;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
-    width: 100%;
-    background-color: transparent;
-    z-index: 2;
-    top: 2rem;
-  }
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    margin: 0.2rem;
-    padding: 0.5em;
-    font-family: "Jost", sans-serif;
-    font-size: 1.5rem;
-  }
-  nav input[type=checkbox]:checked ~ ul {
-    display: flex;
-  }
   main img {
     display: flex;
     width: 100%;
@@ -1175,10 +930,9 @@
     color: white;
     top: 23rem;
     font-size: 1.5rem;
-    z-index: 1;
   }
   main section {
-    background-image: url(../src/svg/1.png), url(../src/svg/2.png), url(../src/svg/3.png);
+    background-image: url(../src/svg/1.png), url(../src/svg/2.png);
     background-position: left center, right center, top center;
     background-size: 7rem, 7rem, 2.5rem;
     background-repeat: no-repeat;
