--- a/css/main.scss
+++ b/css/main.scss
@@ -9,67 +9,6 @@
 }
 
 @media (min-width: 360px) and (max-width: 490px) {
-    nav {
-        display: flex;
-        justify-content: right;
-        align-items: baseline;
-        position: relative;
-        width: 100%;
-        height: 0;
-      
-        .menu-icon {
-            cursor: pointer;
-            font-size: 3em;
-            color: #FFFFFF;
-            position: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 3;
-            margin-top: -0.2rem;
-        }
-      
-        input[type=checkbox] {
-          display: none;
-        }
-      
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: none;
-            flex-direction: column;
-            width: 100%;
-            position: absolute;
-            top: 4rem; /* Adjust this value as needed */
-            background-color: #333333e8;
-            z-index: 2;
-            height: calc(100vh - 10.2rem); /* Adjust to stop at the footer */
-            overflow-y: auto; 
-      
-          li {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-
-            li:last-child {
-                border-bottom: none;
-            }
-
-            a {
-                color: white;
-                text-decoration: none;
-                text-align: center;
-                margin: 0.2rem;
-                padding: 1em;
-                font-family: 'Jost', sans-serif;
-                font-size: 2.5rem;
-                display: block;
-            }
-          }
-        }
-      
-        input[type=checkbox]:checked ~ ul {
-          display: flex;
-        }
-    }
 
     main {
         img {
@@ -111,9 +50,8 @@
             text-align: center;
             position: absolute;
             color: white;
-            top: 9rem;
-            font-size: 1rem;
-            z-index: 1;
+            top: 10rem;
+            font-size: 0.8rem;
           }
 
         section {
@@ -304,67 +242,6 @@
 }
 
 @media (min-width: 491px) and (max-width: 576px){
-    nav {
-        display: flex;
-        justify-content: right;
-        align-items: baseline;
-        position: relative;
-        width: 100%;
-        height: 0;
-      
-        .menu-icon {
-            cursor: pointer;
-            font-size: 3em;
-            color: #FFFFFF;
-            position: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 3;
-            margin-top: -0.2rem;
-        }
-      
-        input[type=checkbox] {
-          display: none;
-        }
-      
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: none;
-            flex-direction: column;
-            width: 100%;
-            position: absolute;
-            top: 4rem; /* Adjust this value as needed */
-            background-color: #333333e8;
-            z-index: 2;
-            height: calc(100vh - 10.2rem); /* Adjust to stop at the footer */
-            overflow-y: auto; 
-      
-          li {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-
-            li:last-child {
-                border-bottom: none;
-            }
-
-            a {
-                color: white;
-                text-decoration: none;
-                text-align: center;
-                margin: 0.2rem;
-                padding: 1em;
-                font-family: 'Jost', sans-serif;
-                font-size: 2.5rem;
-                display: block;
-            }
-          }
-        }
-      
-        input[type=checkbox]:checked ~ ul {
-          display: flex;
-        }
-    }
 
     main {
         img {
@@ -377,7 +254,7 @@
             display: flex;
             width: 100%;
             font-size: 3rem;
-            top: 7rem;
+            top: 6rem;
             color: white;
             justify-content: center;
             position: absolute;
@@ -408,7 +285,6 @@
             color: white;
             top: 12rem;
             font-size: 1rem;
-            z-index: 1;
           }
 
         section {
@@ -599,54 +475,6 @@
 }
     
 @media (min-width: 577px) and (max-width: 769px) {
-    nav {
-        height: 0;
-
-        .menu-icon {
-        //   display: inline-block;
-        //   cursor: pointer;
-        //   font-size: 4.5em;
-            display: none;
-        //   position: absolute;
-        //   top: -0.5rem;
-        //   margin-left: 85%;
-        //   color: #FFFFFF;
-        }
-        
-        input[type=checkbox] {
-            display: none;
-        }
-        
-        ul {
-            list-style: none;
-            display: flex;
-            position: relative;
-            justify-content: end;
-            margin: 0;
-            padding: 0;
-            flex-direction: row;
-            width: 100%;
-            background-color: transparent;
-            z-index: 2;
-            top: 1.7rem;
-            
-            li {
-                a {
-                    color: white;
-                    text-decoration: none;
-                    margin: 0.2rem;
-                    padding: 0.5em;
-                    font-family: 'Jost', sans-serif;
-                    font-size: 1.3rem;
-                }
-            }
-        }
-        
-        input[type=checkbox]:checked ~ ul {
-            display: flex;
-        }
-    }
-
     main {
         img {
             display: flex;
@@ -657,7 +485,7 @@
         h1 {
             display: flex;
             width: 100%;
-            font-size: 4rem;
+            font-size: 3.9rem;
             top: 10rem;
             color: white;
             justify-content: center;
@@ -674,7 +502,7 @@
             text-align: center;
             position: absolute;
             color: white;
-            top: 20rem;
+            top: 15rem;
             font-size: 1rem;
             z-index: 1;
         }
@@ -689,7 +517,6 @@
             color: white;
             top: 17rem;
             font-size: 1rem;
-            z-index: 1;
           }
 
         section {
@@ -711,10 +538,10 @@
             width: 100%;
             padding-left: 10%;
             padding-right: 10%;
-            padding-top: 12%;
+            padding-top: 15%;
             height: 10rem;
-            margin-top: 2rem;
-            margin-bottom: 8rem;
+            margin-top: 3rem;
+            margin-bottom: 10rem;
             text-align: center;
             font-size: 1rem;
             color: black;
@@ -880,53 +707,6 @@
 }
 
 @media (min-width: 770px) and (max-width: 834px) {
-    nav {
-        height: 0;
-        .menu-icon {
-        //   display: inline-block;
-        //   cursor: pointer;
-        //   font-size: 4.5em;
-            display: none;
-        //   position: absolute;
-        //   top: -0.5rem;
-        //   margin-left: 85%;
-        //   color: #FFFFFF;
-        }
-        
-        input[type=checkbox] {
-            display: none;
-        }
-        
-        ul {
-            list-style: none;
-            display: flex;
-            position: relative;
-            justify-content: end;
-            margin: 0;
-            padding: 0;
-            flex-direction: row;
-            width: 100%;
-            background-color: transparent;
-            z-index: 2;
-            top: 2rem;
-            
-            li {
-                a {
-                    color: white;
-                    text-decoration: none;
-                    margin: 0.2rem;
-                    padding: 0.5em;
-                    font-family: 'Jost', sans-serif;
-                    font-size: 1.3rem;
-                }
-            }
-        }
-        
-        input[type=checkbox]:checked ~ ul {
-            display: flex;
-        }
-    }
-
     main {
         img {
             display: flex;
@@ -956,7 +736,6 @@
             color: white;
             top: 20rem;
             font-size: 1rem;
-            z-index: 1;
         }
 
         section {
@@ -978,10 +757,10 @@
             width: 100%;
             padding-left: 10%;
             padding-right: 10%;
-            padding-top: 2.5%;
+            padding-top: 5.5%;
             height: 10rem;
             margin-top: 2rem;
-            margin-bottom: 8rem;
+            margin-bottom: 12rem;
             text-align: center;
             font-size: 1rem;
             color: black;
@@ -1140,53 +919,6 @@
 }
 
 @media (min-width: 835px) and (max-width: 1024px) {
-    nav {
-        height: 0;
-        .menu-icon {
-        //   display: inline-block;
-        //   cursor: pointer;
-        //   font-size: 4.5em;
-            display: none;
-        //   position: absolute;
-        //   top: -0.5rem;
-        //   margin-left: 85%;
-        //   color: #FFFFFF;
-        }
-        
-        input[type=checkbox] {
-            display: none;
-        }
-        
-        ul {
-            list-style: none;
-            display: flex;
-            position: relative;
-            justify-content: end;
-            margin: 0;
-            padding: 0;
-            flex-direction: row;
-            width: 100%;
-            background-color: transparent;
-            z-index: 2;
-            top: 2rem;
-            
-            li {
-                a {
-                    color: white;
-                    text-decoration: none;
-                    margin: 0.2rem;
-                    padding: 0.5em;
-                    font-family: 'Jost', sans-serif;
-                    font-size: 1.5rem;
-                }
-            }
-        }
-        
-        input[type=checkbox]:checked ~ ul {
-            display: flex;
-        }
-    } 
-
     main {
         img {
             display: flex;
@@ -1216,7 +948,6 @@
             color: white;
             top: 20rem;
             font-size: 1.3rem;
-            z-index: 1;
         }
 
         section {
@@ -1400,53 +1131,6 @@
 }
 
 @media (min-width: 1025px) {
-    nav {
-        height: 0;
-        .menu-icon {
-        //   display: inline-block;
-        //   cursor: pointer;
-        //   font-size: 4.5em;
-            display: none;
-        //   position: absolute;
-        //   top: -0.5rem;
-        //   margin-left: 85%;
-        //   color: #FFFFFF;
-        }
-        
-        input[type=checkbox] {
-            display: none;
-        }
-        
-        ul {
-            list-style: none;
-            display: flex;
-            position: fixed;
-            justify-content: end;
-            margin: 0;
-            padding: 0;
-            flex-direction: row;
-            width: 100%;
-            background-color: transparent;
-            z-index: 2;
-            top: 2rem;
-            
-            li {
-                a {
-                    color: white;
-                    text-decoration: none;
-                    margin: 0.2rem;
-                    padding: 0.5em;
-                    font-family: 'Jost', sans-serif;
-                    font-size: 1.5rem;
-                }
-            }
-        }
-        
-        input[type=checkbox]:checked ~ ul {
-            display: flex;
-        }
-    }
-
     main {
         img {
             display: flex;
@@ -1476,14 +1160,13 @@
             color: white;
             top: 23rem;
             font-size: 1.5rem;
-            z-index: 1;
         }
 
         section {
             background-image: 
                 url(../src/svg/1.png),
-                url(../src/svg/2.png),
-                url(../src/svg/3.png);
+                url(../src/svg/2.png);
+                // url(../src/svg/3.png)
 
             background-position: 
                 left center, 
@@ -1530,11 +1213,7 @@
     }
 
     .social {   
-        height: 8rem;
-        z-index: 1;
-        position: relative;
-
-        ul {
+      ul {
             position: relative;
             top: 150%;
             left: 50%;
@@ -1654,7 +1333,9 @@
                     }
                 }
             }
-        }          
+        }      height: 8rem;
+        z-index: 1;
+        position: relative;          
     }
 }
 
