--- a/css/main.scss
+++ b/css/main.scss
@@ -57,7 +57,8 @@
         section {
             background-image: 
                 url(../src/svg/1.png),
-                url(../src/svg/2.png);
+                url(../src/svg/2.png),
+                url(../src/svg/3.png);
 
             background-position: 
                 left center, 
