--- a/css/gallerie.scss
+++ b/css/gallerie.scss
@@ -76,9 +76,9 @@
         white-space: nowrap;
     }
       
-    p {
-        font-size: 25px;
-    }
+    // p {
+    //     font-size: 25px;
+    // }
     
     html,
     body {
@@ -122,9 +122,9 @@
     white-space: nowrap;
     }
       
-    p {
-        font-size: 25px;
-    }
+    // p {
+    //     font-size: 25px;
+    // }
     
     html,
     body {
@@ -168,9 +168,9 @@
     white-space: nowrap;
     }
       
-    p {
-        font-size: 25px;
-    }
+    // p {
+    //     font-size: 25px;
+    // }
     
     html,
     body {
@@ -214,9 +214,9 @@
     white-space: nowrap;
     }
       
-    p {
-        font-size: 25px;
-    }
+    // p {
+    //     font-size: 25px;
+    // }
     
     html,
     body {
@@ -261,9 +261,9 @@
     white-space: nowrap;
     }
       
-    p {
-        font-size: 25px;
-    }
+    // p {
+    //     font-size: 25px;
+    // }
     
     html,
     body {
@@ -306,9 +306,9 @@
         white-space: nowrap;
     }
       
-    p {
-        font-size: 25px;
-    }
+    // p {
+    //     font-size: 25px;
+    // }
     
     html,
     body {
