--- a/css/mainKontakt.css
+++ b/css/mainKontakt.css
@@ -40,6 +40,12 @@
   .kontakt button:hover, .kontakt input[type=submit]:hover {
     background-color: #34495e;
   }
+  .kontakt a {
+    color: black;
+    font-size: 1.2rem;
+    display: flex;
+    margin-bottom: 1rem;
+  }
 }
 @media (min-width: 577px) and (max-width: 769px) {
   .kontakt {
@@ -82,6 +88,12 @@
   }
   .kontakt button:hover, .kontakt input[type=submit]:hover {
     background-color: #34495e;
+  }
+  a {
+    color: black;
+    font-size: 1.7rem;
+    display: flex;
+    margin-bottom: 1rem;
   }
   .spacer {
     width: 100%;
@@ -132,6 +144,12 @@
   .kontakt button:hover, .kontakt input[type=submit]:hover {
     background-color: #34495e;
   }
+  .kontakt a {
+    color: black;
+    font-size: 1.7rem;
+    display: flex;
+    margin-bottom: 1rem;
+  }
   .spacer {
     width: 100%;
     height: 8rem;
@@ -181,6 +199,12 @@
   .kontakt button:hover, .kontakt input[type=submit]:hover {
     background-color: #34495e;
   }
+  .kontakt a {
+    color: black;
+    font-size: 1.4rem;
+    display: flex;
+    margin-bottom: 1rem;
+  }
   .spacer {
     width: 100%;
     height: 8rem;
@@ -229,5 +253,11 @@
   }
   .kontakt button:hover, .kontakt input[type=submit]:hover {
     background-color: #34495e;
+  }
+  .kontakt a {
+    color: black;
+    font-size: 1.7rem;
+    display: flex;
+    margin-bottom: 1rem;
   }
 }/*# sourceMappingURL=mainKontakt.css.map */
